commit bilingual contents

--- a/docs/visual-basic/misc/bc30301.md
+++ b/docs/visual-basic/misc/bc30301.md
@@ -1,34 +1,28 @@
 ---
-title: '&#39;です。&lt;method1&gt;&#39; と &#39;&lt;method2&gt;&#39; 戻り値の型のみが異なるために、お互いをオーバー ロードすることはできません'
+title: '&#39;&lt;method1&gt; &#39;と&#39; &lt;method2&gt; &#39;戻り値の型のみが異なるために、お互いをオーバー ロードすることはできません'
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-visual-basic
-ms.topic: article
 f1_keywords:
 - bc30301
 - vbc30301
 helpviewer_keywords:
 - BC30301
 ms.assetid: 5adc442b-9671-4d93-add8-42929b1a09b9
-caps.latest.revision: 8
-author: dotnet-bot
-ms.author: dotnetcontent
-ms.openlocfilehash: a812a03875244411780156b5d38e098d5aea4856
-ms.sourcegitcommit: 4f3fef493080a43e70e951223894768d36ce430a
+ms.openlocfilehash: 5826938a8f50c0c2d042f5aa3f5b12f523ec97f6
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 11/21/2017
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33613141"
 ---
-# <a name="39ltmethod1gt39-and-39ltmethod2gt39-cannot-overload-each-other-because-they-differ-only-by-return-types"></a><span data-ttu-id="6b5b2-102">&#39;です。&lt;method1&gt;&#39; と &#39;&lt;method2&gt;&#39; 戻り値の型のみが異なるために、お互いをオーバー ロードすることはできません</span><span class="sxs-lookup"><span data-stu-id="6b5b2-102">&#39;&lt;method1&gt;&#39; and &#39;&lt;method2&gt;&#39; cannot overload each other because they differ only by return types</span></span>
-<span data-ttu-id="6b5b2-103">メソッドを、戻り値の型のみが異なるメソッドでオーバーロードしようとしました。</span><span class="sxs-lookup"><span data-stu-id="6b5b2-103">You have attempted to overload a method with another method that differs from the first only in its return type.</span></span> <span data-ttu-id="6b5b2-104">オーバーロードする際は、メソッドの任意の 2 つのバージョンを引数リストによって区別する必要があります。メソッドを区別するのに、引数リスト以外のものを使用することはできません。</span><span class="sxs-lookup"><span data-stu-id="6b5b2-104">In overloading, you must differentiate any two versions of a method by their argument lists; you cannot use anything other than argument lists to differentiate the methods.</span></span>  
+# <a name="39ltmethod1gt39-and-39ltmethod2gt39-cannot-overload-each-other-because-they-differ-only-by-return-types"></a><span data-ttu-id="0d110-102">&#39;&lt;method1&gt; &#39;と&#39; &lt;method2&gt; &#39;戻り値の型のみが異なるために、お互いをオーバー ロードすることはできません</span><span class="sxs-lookup"><span data-stu-id="0d110-102">&#39;&lt;method1&gt;&#39; and &#39;&lt;method2&gt;&#39; cannot overload each other because they differ only by return types</span></span>
+<span data-ttu-id="0d110-103">メソッドを、戻り値の型のみが異なるメソッドでオーバーロードしようとしました。</span><span class="sxs-lookup"><span data-stu-id="0d110-103">You have attempted to overload a method with another method that differs from the first only in its return type.</span></span> <span data-ttu-id="0d110-104">オーバーロードする際は、メソッドの任意の 2 つのバージョンを引数リストによって区別する必要があります。メソッドを区別するのに、引数リスト以外のものを使用することはできません。</span><span class="sxs-lookup"><span data-stu-id="0d110-104">In overloading, you must differentiate any two versions of a method by their argument lists; you cannot use anything other than argument lists to differentiate the methods.</span></span>  
   
- <span data-ttu-id="6b5b2-105">**エラー ID:** BC30301</span><span class="sxs-lookup"><span data-stu-id="6b5b2-105">**Error ID:** BC30301</span></span>  
+ <span data-ttu-id="0d110-105">**エラー ID:** BC30301</span><span class="sxs-lookup"><span data-stu-id="0d110-105">**Error ID:** BC30301</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="6b5b2-106">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="6b5b2-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="0d110-106">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="0d110-106">To correct this error</span></span>  
   
--   <span data-ttu-id="6b5b2-107">メソッドが引数リストによって区別されていることを確認します。</span><span class="sxs-lookup"><span data-stu-id="6b5b2-107">Ensure that the methods are differentiated by their argument lists.</span></span>  
+-   <span data-ttu-id="0d110-107">メソッドが引数リストによって区別されていることを確認します。</span><span class="sxs-lookup"><span data-stu-id="0d110-107">Ensure that the methods are differentiated by their argument lists.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="6b5b2-108">関連項目</span><span class="sxs-lookup"><span data-stu-id="6b5b2-108">See Also</span></span>  
- [<span data-ttu-id="6b5b2-109">プロシージャのオーバーロード</span><span class="sxs-lookup"><span data-stu-id="6b5b2-109">Procedure Overloading</span></span>](../../visual-basic/programming-guide/language-features/procedures/procedure-overloading.md)  
- [<span data-ttu-id="6b5b2-110">プロシージャのオーバーロードに関する注意事項</span><span class="sxs-lookup"><span data-stu-id="6b5b2-110">Considerations in Overloading Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/considerations-in-overloading-procedures.md)
+## <a name="see-also"></a><span data-ttu-id="0d110-108">関連項目</span><span class="sxs-lookup"><span data-stu-id="0d110-108">See Also</span></span>  
+ [<span data-ttu-id="0d110-109">プロシージャのオーバーロード</span><span class="sxs-lookup"><span data-stu-id="0d110-109">Procedure Overloading</span></span>](../../visual-basic/programming-guide/language-features/procedures/procedure-overloading.md)  
+ [<span data-ttu-id="0d110-110">プロシージャのオーバーロードに関する注意事項</span><span class="sxs-lookup"><span data-stu-id="0d110-110">Considerations in Overloading Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/considerations-in-overloading-procedures.md)
