--- a/docs/visual-basic/misc/bc30395.md
+++ b/docs/visual-basic/misc/bc30395.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33611008"
 ---
 # <a name="39ltspecifiergt39-is-not-valid-on-a-structure-declaration"></a><span data-ttu-id="7e715-102">&#39;&lt;指定子&gt;&#39;は構造体の宣言では無効</span><span class="sxs-lookup"><span data-stu-id="7e715-102">&#39;&lt;specifier&gt;&#39; is not valid on a Structure declaration</span></span>
 <span data-ttu-id="7e715-103">`Dim` または `Override`などの指定子を使用していますが、 `Structure` 宣言では使用できません。</span><span class="sxs-lookup"><span data-stu-id="7e715-103">You have used a specifier, such as `Dim` or `Override`, that is not valid on a `Structure` declaration.</span></span>  
