--- a/docs/visual-basic/misc/bc30711.md
+++ b/docs/visual-basic/misc/bc30711.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33616243"
 ---
 # <a name="cannot-set-the-value-of-a-local-variable-for-a-method-that-is-not-at-the-top-of-the-stack"></a><span data-ttu-id="832ed-102">スタックの一番上にないメソッドのローカル変数の値を設定することはできません。</span><span class="sxs-lookup"><span data-stu-id="832ed-102">Cannot set the value of a local variable for a method that is not at the top of the stack</span></span>
 <span data-ttu-id="832ed-103">呼び出しスタックの一番上にある場合にのみ、変数を変更することができます。</span><span class="sxs-lookup"><span data-stu-id="832ed-103">You can only modify variables if they are the top of the call stack.</span></span> <span data-ttu-id="832ed-104">たとえば、 `procedure1` が `procedure2` を呼び出し、現在の位置が `procedure1`である場合、 `procedure2`内の変数を変更することはできません。</span><span class="sxs-lookup"><span data-stu-id="832ed-104">For example, if `procedure1` calls `procedure2` and you are in `procedure1`, you cannot modify variables in `procedure2`.</span></span>  
