--- a/docs/visual-basic/misc/bc30760.md
+++ b/docs/visual-basic/misc/bc30760.md
@@ -1,39 +1,33 @@
 ---
-title: "参照先オブジェクトが、値は &#39;何も &#39;"
+title: 参照先オブジェクトの値を持つ&#39;何も行われません&#39;
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-visual-basic
-ms.topic: article
 f1_keywords:
 - bc30760
 - vbc30760
 helpviewer_keywords:
 - BC30760
 ms.assetid: 7e792fd8-2880-402b-a908-c89e5b028300
-caps.latest.revision: 
-author: dotnet-bot
-ms.author: dotnetcontent
-ms.openlocfilehash: 89a1662a5c484020537feeb34a20fdf929ccf284
-ms.sourcegitcommit: 34ec7753acf76f90a0fa845235ef06663dc9e36e
+ms.openlocfilehash: 8aaa662e2315987ba08fcc13048651f8ba306400
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 12/21/2017
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33613007"
 ---
-# <a name="referenced-object-has-a-value-of-39nothing39"></a><span data-ttu-id="77480-102">参照先オブジェクトが、値は &#39;何も &#39;</span><span class="sxs-lookup"><span data-stu-id="77480-102">Referenced object has a value of &#39;Nothing&#39;</span></span>
-<span data-ttu-id="77480-103">使用しているオブジェクトに値 `Nothing`がありますが、使用可能な値が必要です。</span><span class="sxs-lookup"><span data-stu-id="77480-103">The object being used has the value `Nothing`, but a usable value is expected.</span></span> <span data-ttu-id="77480-104">`Nothing` はオブジェクトには値がないことを示す値であり、その理由は、オブジェクトに値が割り当てられなかったか、値 `Nothing`が割り当てられたことです。</span><span class="sxs-lookup"><span data-stu-id="77480-104">`Nothing` is a value that indicates that an object has no value, either because no value has been assigned to it, or it was assigned the value `Nothing`.</span></span>  
+# <a name="referenced-object-has-a-value-of-39nothing39"></a><span data-ttu-id="624b6-102">参照先オブジェクトの値を持つ&#39;何も行われません&#39;</span><span class="sxs-lookup"><span data-stu-id="624b6-102">Referenced object has a value of &#39;Nothing&#39;</span></span>
+<span data-ttu-id="624b6-103">使用しているオブジェクトに値 `Nothing`がありますが、使用可能な値が必要です。</span><span class="sxs-lookup"><span data-stu-id="624b6-103">The object being used has the value `Nothing`, but a usable value is expected.</span></span> <span data-ttu-id="624b6-104">`Nothing` はオブジェクトには値がないことを示す値であり、その理由は、オブジェクトに値が割り当てられなかったか、値 `Nothing`が割り当てられたことです。</span><span class="sxs-lookup"><span data-stu-id="624b6-104">`Nothing` is a value that indicates that an object has no value, either because no value has been assigned to it, or it was assigned the value `Nothing`.</span></span>  
   
- <span data-ttu-id="77480-105">**エラー ID:** BC30760</span><span class="sxs-lookup"><span data-stu-id="77480-105">**Error ID:** BC30760</span></span>  
+ <span data-ttu-id="624b6-105">**エラー ID:** BC30760</span><span class="sxs-lookup"><span data-stu-id="624b6-105">**Error ID:** BC30760</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="77480-106">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="77480-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="624b6-106">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="624b6-106">To correct this error</span></span>  
   
-1.  <span data-ttu-id="77480-107">エラーが発生したプロシージャのスコープ内でオブジェクトを宣言していることを確認します。</span><span class="sxs-lookup"><span data-stu-id="77480-107">Check the object to make sure it has been declared within the scope of the procedure where the error occurred.</span></span>  
+1.  <span data-ttu-id="624b6-107">エラーが発生したプロシージャのスコープ内でオブジェクトを宣言していることを確認します。</span><span class="sxs-lookup"><span data-stu-id="624b6-107">Check the object to make sure it has been declared within the scope of the procedure where the error occurred.</span></span>  
   
-2.  <span data-ttu-id="77480-108">オブジェクトの値を設定していることを確認します。</span><span class="sxs-lookup"><span data-stu-id="77480-108">Verify that the value of the object is being set.</span></span>  
+2.  <span data-ttu-id="624b6-108">オブジェクトの値を設定していることを確認します。</span><span class="sxs-lookup"><span data-stu-id="624b6-108">Verify that the value of the object is being set.</span></span>  
   
     > [!NOTE]
-    >  <span data-ttu-id="77480-109">値 `Nothing` は 0 とも空の文字列とも同じではありません。</span><span class="sxs-lookup"><span data-stu-id="77480-109">The value `Nothing` is not the same as zero or an empty string.</span></span> <span data-ttu-id="77480-110">`IsNothing` を使用して、オブジェクトに値 `Nothing`が含まれているかどうかを確認できます。</span><span class="sxs-lookup"><span data-stu-id="77480-110">You can use `IsNothing` to check to see if an object contains the value `Nothing`.</span></span>  
+    >  <span data-ttu-id="624b6-109">値 `Nothing` は 0 とも空の文字列とも同じではありません。</span><span class="sxs-lookup"><span data-stu-id="624b6-109">The value `Nothing` is not the same as zero or an empty string.</span></span> <span data-ttu-id="624b6-110">`IsNothing` を使用して、オブジェクトに値 `Nothing`が含まれているかどうかを確認できます。</span><span class="sxs-lookup"><span data-stu-id="624b6-110">You can use `IsNothing` to check to see if an object contains the value `Nothing`.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="77480-111">参照</span><span class="sxs-lookup"><span data-stu-id="77480-111">See Also</span></span>  
- [<span data-ttu-id="77480-112">Nothing</span><span class="sxs-lookup"><span data-stu-id="77480-112">Nothing</span></span>](../../visual-basic/language-reference/nothing.md)  
+## <a name="see-also"></a><span data-ttu-id="624b6-111">関連項目</span><span class="sxs-lookup"><span data-stu-id="624b6-111">See Also</span></span>  
+ [<span data-ttu-id="624b6-112">Nothing</span><span class="sxs-lookup"><span data-stu-id="624b6-112">Nothing</span></span>](../../visual-basic/language-reference/nothing.md)  
  
