--- a/docs/visual-basic/misc/bc30940.md
+++ b/docs/visual-basic/misc/bc30940.md
@@ -1,38 +1,32 @@
 ---
-title: '&#39;です。戻り値 &#39;ステートメントで、&#39;です。AddHandler &#39;、&#39;です。RemoveHandler &#39;、または &#39;です。RaiseEvent &#39;メソッドは値を返すことはできません。'
+title: '&#39;返す&#39;内のステートメント、 &#39;AddHandler&#39;、 &#39;RemoveHandler&#39;、または&#39;RaiseEvent&#39;メソッドは値を返すことはできません'
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-visual-basic
-ms.topic: article
 f1_keywords:
 - bc30940
 - vbc30940
 helpviewer_keywords:
 - BC30940
 ms.assetid: 0e4d037a-2d20-40e4-8ead-6d709d1c9c7a
-caps.latest.revision: 9
-author: dotnet-bot
-ms.author: dotnetcontent
-ms.openlocfilehash: 741e1aac208985c912ac6d00e02804e2422991d6
-ms.sourcegitcommit: 4f3fef493080a43e70e951223894768d36ce430a
+ms.openlocfilehash: 48e2a3adf0f926e3a604d967fea37f0b2532155e
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 11/21/2017
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33618187"
 ---
-# <a name="39return39-statement-in-an-39addhandler39-39removehandler39-or-39raiseevent39-method-cannot-return-a-value"></a><span data-ttu-id="8301d-102">&#39;です。戻り値 &#39;ステートメントで、&#39;です。AddHandler &#39;、&#39;です。RemoveHandler &#39;、または &#39;です。RaiseEvent &#39;メソッドは値を返すことはできません。</span><span class="sxs-lookup"><span data-stu-id="8301d-102">&#39;Return&#39; statement in an &#39;AddHandler&#39;, &#39;RemoveHandler&#39;, or &#39;RaiseEvent&#39; method cannot return a value</span></span>
-<span data-ttu-id="8301d-103">`AddHandler`宣言内の `RemoveHandler`、 `RaiseEvent` 、 `Custom Event` の各メソッドには、それぞれのメソッドを終了する `Return` ステートメントを含めることができます。</span><span class="sxs-lookup"><span data-stu-id="8301d-103">The `AddHandler`, `RemoveHandler`, and `RaiseEvent` methods in a `Custom Event` declaration can contain `Return` statements to exit the methods.</span></span> <span data-ttu-id="8301d-104">ただし、いずれのメソッドも値を返すことができないため、 `Return` ステートメントでは戻り値を指定できません。</span><span class="sxs-lookup"><span data-stu-id="8301d-104">However, the `Return` statement cannot specify a return value because the methods cannot return values.</span></span>  
+# <a name="39return39-statement-in-an-39addhandler39-39removehandler39-or-39raiseevent39-method-cannot-return-a-value"></a><span data-ttu-id="dd81c-102">&#39;返す&#39;内のステートメント、 &#39;AddHandler&#39;、 &#39;RemoveHandler&#39;、または&#39;RaiseEvent&#39;メソッドは値を返すことはできません</span><span class="sxs-lookup"><span data-stu-id="dd81c-102">&#39;Return&#39; statement in an &#39;AddHandler&#39;, &#39;RemoveHandler&#39;, or &#39;RaiseEvent&#39; method cannot return a value</span></span>
+<span data-ttu-id="dd81c-103">`AddHandler`宣言内の `RemoveHandler`、 `RaiseEvent` 、 `Custom Event` の各メソッドには、それぞれのメソッドを終了する `Return` ステートメントを含めることができます。</span><span class="sxs-lookup"><span data-stu-id="dd81c-103">The `AddHandler`, `RemoveHandler`, and `RaiseEvent` methods in a `Custom Event` declaration can contain `Return` statements to exit the methods.</span></span> <span data-ttu-id="dd81c-104">ただし、いずれのメソッドも値を返すことができないため、 `Return` ステートメントでは戻り値を指定できません。</span><span class="sxs-lookup"><span data-stu-id="dd81c-104">However, the `Return` statement cannot specify a return value because the methods cannot return values.</span></span>  
   
- <span data-ttu-id="8301d-105">**エラー ID:** BC30940</span><span class="sxs-lookup"><span data-stu-id="8301d-105">**Error ID:** BC30940</span></span>  
+ <span data-ttu-id="dd81c-105">**エラー ID:** BC30940</span><span class="sxs-lookup"><span data-stu-id="dd81c-105">**Error ID:** BC30940</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="8301d-106">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="8301d-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="dd81c-106">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="dd81c-106">To correct this error</span></span>  
   
--   <span data-ttu-id="8301d-107">`Return` ステートメントに続く式を削除します。</span><span class="sxs-lookup"><span data-stu-id="8301d-107">Remove the expression following the `Return` statement.</span></span>  
+-   <span data-ttu-id="dd81c-107">`Return` ステートメントに続く式を削除します。</span><span class="sxs-lookup"><span data-stu-id="dd81c-107">Remove the expression following the `Return` statement.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="8301d-108">関連項目</span><span class="sxs-lookup"><span data-stu-id="8301d-108">See Also</span></span>  
- [<span data-ttu-id="8301d-109">Event ステートメント</span><span class="sxs-lookup"><span data-stu-id="8301d-109">Event Statement</span></span>](../../visual-basic/language-reference/statements/event-statement.md)  
- [<span data-ttu-id="8301d-110">AddHandler ステートメント</span><span class="sxs-lookup"><span data-stu-id="8301d-110">AddHandler statement</span></span>](~/docs/visual-basic/language-reference/statements/addhandler-statement.md)  
- [<span data-ttu-id="8301d-111">RemoveHandler ステートメント</span><span class="sxs-lookup"><span data-stu-id="8301d-111">RemoveHandler statement</span></span>](~/docs/visual-basic/language-reference/statements/removehandler-statement.md)  
- [<span data-ttu-id="8301d-112">RaiseEvent ステートメント</span><span class="sxs-lookup"><span data-stu-id="8301d-112">RaiseEvent statement</span></span>](~/docs/visual-basic/language-reference/statements/raiseevent-statement.md)  
- [<span data-ttu-id="8301d-113">Return ステートメント</span><span class="sxs-lookup"><span data-stu-id="8301d-113">Return Statement</span></span>](../../visual-basic/language-reference/statements/return-statement.md)  
- [<span data-ttu-id="8301d-114">イベント</span><span class="sxs-lookup"><span data-stu-id="8301d-114">Events</span></span>](../../visual-basic/programming-guide/language-features/events/index.md)
+## <a name="see-also"></a><span data-ttu-id="dd81c-108">関連項目</span><span class="sxs-lookup"><span data-stu-id="dd81c-108">See Also</span></span>  
+ [<span data-ttu-id="dd81c-109">Event ステートメント</span><span class="sxs-lookup"><span data-stu-id="dd81c-109">Event Statement</span></span>](../../visual-basic/language-reference/statements/event-statement.md)  
+ [<span data-ttu-id="dd81c-110">AddHandler ステートメント</span><span class="sxs-lookup"><span data-stu-id="dd81c-110">AddHandler statement</span></span>](~/docs/visual-basic/language-reference/statements/addhandler-statement.md)  
+ [<span data-ttu-id="dd81c-111">RemoveHandler ステートメント</span><span class="sxs-lookup"><span data-stu-id="dd81c-111">RemoveHandler statement</span></span>](~/docs/visual-basic/language-reference/statements/removehandler-statement.md)  
+ [<span data-ttu-id="dd81c-112">RaiseEvent ステートメント</span><span class="sxs-lookup"><span data-stu-id="dd81c-112">RaiseEvent statement</span></span>](~/docs/visual-basic/language-reference/statements/raiseevent-statement.md)  
+ [<span data-ttu-id="dd81c-113">Return ステートメント</span><span class="sxs-lookup"><span data-stu-id="dd81c-113">Return Statement</span></span>](../../visual-basic/language-reference/statements/return-statement.md)  
+ [<span data-ttu-id="dd81c-114">イベント</span><span class="sxs-lookup"><span data-stu-id="dd81c-114">Events</span></span>](../../visual-basic/programming-guide/language-features/events/index.md)
