--- a/docs/visual-basic/misc/bc31023.md
+++ b/docs/visual-basic/misc/bc31023.md
@@ -1,33 +1,27 @@
 ---
 title: XML を解析できません:&lt;エラー&gt;
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-visual-basic
-ms.topic: article
 f1_keywords:
 - bc31023
 - vbc31023
 helpviewer_keywords:
 - BC31023
 ms.assetid: c7e1df39-0b4f-4956-8826-cae3fea2770d
-caps.latest.revision: 7
-author: dotnet-bot
-ms.author: dotnetcontent
-ms.openlocfilehash: 8a7503ec2a8cd4705ba539905d928267b5e3b6bf
-ms.sourcegitcommit: bd1ef61f4bb794b25383d3d72e71041a5ced172e
+ms.openlocfilehash: a636b21d2f7f1dc03cf5b5399028b9393c23281f
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 10/18/2017
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33618910"
 ---
-# <a name="unable-to-parse-xml-lterrorgt"></a><span data-ttu-id="ac2b9-102">XML を解析できません:&lt;エラー&gt;</span><span class="sxs-lookup"><span data-stu-id="ac2b9-102">Unable to parse XML: &lt;error&gt;</span></span>
-<span data-ttu-id="ac2b9-103">使用中の XML ファイルにエラーがあります。</span><span class="sxs-lookup"><span data-stu-id="ac2b9-103">There is an error in the XML file being used.</span></span>  
+# <a name="unable-to-parse-xml-lterrorgt"></a><span data-ttu-id="387f6-102">XML を解析できません:&lt;エラー&gt;</span><span class="sxs-lookup"><span data-stu-id="387f6-102">Unable to parse XML: &lt;error&gt;</span></span>
+<span data-ttu-id="387f6-103">使用中の XML ファイルにエラーがあります。</span><span class="sxs-lookup"><span data-stu-id="387f6-103">There is an error in the XML file being used.</span></span>  
   
- <span data-ttu-id="ac2b9-104">**エラー ID:** BC31023</span><span class="sxs-lookup"><span data-stu-id="ac2b9-104">**Error ID:** BC31023</span></span>  
+ <span data-ttu-id="387f6-104">**エラー ID:** BC31023</span><span class="sxs-lookup"><span data-stu-id="387f6-104">**Error ID:** BC31023</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="ac2b9-105">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="ac2b9-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="387f6-105">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="387f6-105">To correct this error</span></span>  
   
--   <span data-ttu-id="ac2b9-106">XML が整形式であること、有効であること、ファイルが破損していないことを確認します。</span><span class="sxs-lookup"><span data-stu-id="ac2b9-106">Verify that the XML is well formed, valid, and that the file is not damaged.</span></span>  
+-   <span data-ttu-id="387f6-106">XML が整形式であること、有効であること、ファイルが破損していないことを確認します。</span><span class="sxs-lookup"><span data-stu-id="387f6-106">Verify that the XML is well formed, valid, and that the file is not damaged.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="ac2b9-107">関連項目</span><span class="sxs-lookup"><span data-stu-id="ac2b9-107">See Also</span></span>  
- [<span data-ttu-id="ac2b9-108">XML ドキュメントと XML データ</span><span class="sxs-lookup"><span data-stu-id="ac2b9-108">XML Documents and Data</span></span>](../../standard/data/xml/index.md)
+## <a name="see-also"></a><span data-ttu-id="387f6-107">関連項目</span><span class="sxs-lookup"><span data-stu-id="387f6-107">See Also</span></span>  
+ [<span data-ttu-id="387f6-108">XML ドキュメントと XML データ</span><span class="sxs-lookup"><span data-stu-id="387f6-108">XML Documents and Data</span></span>](../../standard/data/xml/index.md)
