--- a/docs/visual-basic/misc/bc36534.md
+++ b/docs/visual-basic/misc/bc36534.md
@@ -1,30 +1,24 @@
 ---
-title: "式を式のツリーに変換することはできません"
+title: 式を式のツリーに変換することはできません
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-visual-basic
-ms.topic: article
 f1_keywords:
 - vbc36534
 - bc36534
 helpviewer_keywords:
 - BC36534
 ms.assetid: c6ea9349-2b38-4345-9118-45cf184ab9ef
-caps.latest.revision: 
-author: dotnet-bot
-ms.author: dotnetcontent
-ms.openlocfilehash: 124b01bb924be8b42207bd982e688cc73250fa28
-ms.sourcegitcommit: 34ec7753acf76f90a0fa845235ef06663dc9e36e
+ms.openlocfilehash: ce415a0deeab408c9f59f7aab4d38f2d5b933461
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 12/21/2017
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33629587"
 ---
-# <a name="expression-cannot-be-converted-into-an-expression-tree"></a><span data-ttu-id="a1542-102">式を式のツリーに変換することはできません</span><span class="sxs-lookup"><span data-stu-id="a1542-102">Expression cannot be converted into an expression tree</span></span>
-<span data-ttu-id="a1542-103">ほとんどの式は式のツリーに変換できますが、変換できないものもあります。</span><span class="sxs-lookup"><span data-stu-id="a1542-103">Most expressions can be converted into expression trees, but some cannot.</span></span> <span data-ttu-id="a1542-104">このエラーは、変換できない式を変換しようとしたことを示しています。</span><span class="sxs-lookup"><span data-stu-id="a1542-104">This error indicates that an attempt has been made to convert an expression that cannot be converted.</span></span>  
+# <a name="expression-cannot-be-converted-into-an-expression-tree"></a><span data-ttu-id="f6cb5-102">式を式のツリーに変換することはできません</span><span class="sxs-lookup"><span data-stu-id="f6cb5-102">Expression cannot be converted into an expression tree</span></span>
+<span data-ttu-id="f6cb5-103">ほとんどの式は式のツリーに変換できますが、変換できないものもあります。</span><span class="sxs-lookup"><span data-stu-id="f6cb5-103">Most expressions can be converted into expression trees, but some cannot.</span></span> <span data-ttu-id="f6cb5-104">このエラーは、変換できない式を変換しようとしたことを示しています。</span><span class="sxs-lookup"><span data-stu-id="f6cb5-104">This error indicates that an attempt has been made to convert an expression that cannot be converted.</span></span>  
   
- <span data-ttu-id="a1542-105">**エラー ID:** BC36534</span><span class="sxs-lookup"><span data-stu-id="a1542-105">**Error ID:** BC36534</span></span>  
+ <span data-ttu-id="f6cb5-105">**エラー ID:** BC36534</span><span class="sxs-lookup"><span data-stu-id="f6cb5-105">**Error ID:** BC36534</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="a1542-106">参照</span><span class="sxs-lookup"><span data-stu-id="a1542-106">See Also</span></span>  
+## <a name="see-also"></a><span data-ttu-id="f6cb5-106">関連項目</span><span class="sxs-lookup"><span data-stu-id="f6cb5-106">See Also</span></span>  
    
- [<span data-ttu-id="a1542-107">方法 : 式ツリーを使用して動的クエリをビルドする</span><span class="sxs-lookup"><span data-stu-id="a1542-107">How to: Use Expression Trees to Build Dynamic Queries</span></span>](http://msdn.microsoft.com/library/1e37e0cc-eef3-48bb-8b69-3adabf322735)
+ [<span data-ttu-id="f6cb5-107">方法 : 式ツリーを使用して動的クエリをビルドする</span><span class="sxs-lookup"><span data-stu-id="f6cb5-107">How to: Use Expression Trees to Build Dynamic Queries</span></span>](http://msdn.microsoft.com/library/1e37e0cc-eef3-48bb-8b69-3adabf322735)
