--- a/docs/visual-basic/misc/bc30175.md
+++ b/docs/visual-basic/misc/bc30175.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33615646"
 ---
 # <a name="lttype1gt-39lttypenamegt39-and-lttype2gt-39lttypenamegt39-declared-in-39ltnamegt39-conflict-in-ltnamespacegt-39ltnamespacenamegt39"></a><span data-ttu-id="6ceb7-102">&lt;type1&gt; &#39; &lt;typename&gt; &#39;と&lt;type2&gt; &#39; &lt;typename&gt;&#39;で宣言された&#39;&lt;名前&gt;&#39;で競合&lt;名前空間&gt; &#39; &lt;namespacename&gt;&#39;</span><span class="sxs-lookup"><span data-stu-id="6ceb7-102">&lt;type1&gt; &#39;&lt;typename&gt;&#39; and &lt;type2&gt; &#39;&lt;typename&gt;&#39;, declared in &#39;&lt;name&gt;&#39;, conflict in &lt;namespace&gt; &#39;&lt;namespacename&gt;&#39;</span></span>
 <span data-ttu-id="6ceb7-103">クラスやモジュールなどの 2 つの宣言された要素が、同じ名前空間内で同じ名前を持っています。</span><span class="sxs-lookup"><span data-stu-id="6ceb7-103">Two declared elements, such as a class and a module, have the same name in the same namespace.</span></span>  
