--- a/docs/visual-basic/misc/bc30177.md
+++ b/docs/visual-basic/misc/bc30177.md
@@ -1,33 +1,27 @@
 ---
-title: '唯一のいずれかの &#39;NotOverridable &#39;、&#39;です。MustOverride &#39;以外の場合は、または &#39;オーバーライド可能です (& a) #39;。指定することができます。'
+title: 1 つのみ&#39;NotOverridable&#39;、 &#39;MustOverride&#39;、または&#39;Overridable&#39;を指定できます
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-visual-basic
-ms.topic: article
 f1_keywords:
 - bc30177
 - vbc30177
 helpviewer_keywords:
 - BC30177
 ms.assetid: cf9a4a60-ecbb-4010-a3d6-fc8e2e42a69b
-caps.latest.revision: 8
-author: dotnet-bot
-ms.author: dotnetcontent
-ms.openlocfilehash: 1daf50cbd4392c1927f05bd8fd04f8287e9a873a
-ms.sourcegitcommit: bd1ef61f4bb794b25383d3d72e71041a5ced172e
+ms.openlocfilehash: 8e56c24e6f29772ad5a468884b4736dbb6e9144a
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 10/18/2017
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33613541"
 ---
-# <a name="only-one-of-39notoverridable39-39mustoverride39-or-39overridable39-can-be-specified"></a><span data-ttu-id="af6ad-102">唯一のいずれかの &#39;NotOverridable &#39;、&#39;です。MustOverride &#39;以外の場合は、または &#39;オーバーライド可能です (& a) #39;。指定することができます。</span><span class="sxs-lookup"><span data-stu-id="af6ad-102">Only one of &#39;NotOverridable&#39;, &#39;MustOverride&#39;, or &#39;Overridable&#39; can be specified</span></span>
-<span data-ttu-id="af6ad-103">競合するオーバーライドの指定が、要素宣言で発生します。</span><span class="sxs-lookup"><span data-stu-id="af6ad-103">Conflicting overriding specifications occur in an element declaration.</span></span> <span data-ttu-id="af6ad-104">オーバーライド キーワードは、相互に排他的です。</span><span class="sxs-lookup"><span data-stu-id="af6ad-104">The overriding keywords are mutually exclusive.</span></span>  
+# <a name="only-one-of-39notoverridable39-39mustoverride39-or-39overridable39-can-be-specified"></a><span data-ttu-id="bb9c2-102">1 つのみ&#39;NotOverridable&#39;、 &#39;MustOverride&#39;、または&#39;Overridable&#39;を指定できます</span><span class="sxs-lookup"><span data-stu-id="bb9c2-102">Only one of &#39;NotOverridable&#39;, &#39;MustOverride&#39;, or &#39;Overridable&#39; can be specified</span></span>
+<span data-ttu-id="bb9c2-103">競合するオーバーライドの指定が、要素宣言で発生します。</span><span class="sxs-lookup"><span data-stu-id="bb9c2-103">Conflicting overriding specifications occur in an element declaration.</span></span> <span data-ttu-id="bb9c2-104">オーバーライド キーワードは、相互に排他的です。</span><span class="sxs-lookup"><span data-stu-id="bb9c2-104">The overriding keywords are mutually exclusive.</span></span>  
   
- <span data-ttu-id="af6ad-105">**エラー ID:** BC30177</span><span class="sxs-lookup"><span data-stu-id="af6ad-105">**Error ID:** BC30177</span></span>  
+ <span data-ttu-id="bb9c2-105">**エラー ID:** BC30177</span><span class="sxs-lookup"><span data-stu-id="bb9c2-105">**Error ID:** BC30177</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="af6ad-106">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="af6ad-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="bb9c2-106">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="bb9c2-106">To correct this error</span></span>  
   
--   <span data-ttu-id="af6ad-107">オーバーライド指定子を 1 つを選択し、その他のキーワードを宣言から削除します。</span><span class="sxs-lookup"><span data-stu-id="af6ad-107">Choose one overriding specifier and remove the other keywords from the declaration.</span></span>  
+-   <span data-ttu-id="bb9c2-107">オーバーライド指定子を 1 つを選択し、その他のキーワードを宣言から削除します。</span><span class="sxs-lookup"><span data-stu-id="bb9c2-107">Choose one overriding specifier and remove the other keywords from the declaration.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="af6ad-108">関連項目</span><span class="sxs-lookup"><span data-stu-id="af6ad-108">See Also</span></span>  
- [<span data-ttu-id="af6ad-109">派生クラスのプロパティとメソッドをオーバーライドします。</span><span class="sxs-lookup"><span data-stu-id="af6ad-109">Overriding properties and methods in derived classes</span></span>](~/docs/visual-basic/programming-guide/language-features/objects-and-classes/inheritance-basics.md#overriding-properties-and-methods-in-derived-classes)
+## <a name="see-also"></a><span data-ttu-id="bb9c2-108">関連項目</span><span class="sxs-lookup"><span data-stu-id="bb9c2-108">See Also</span></span>  
+ [<span data-ttu-id="bb9c2-109">派生クラスのプロパティとメソッドをオーバーライドします。</span><span class="sxs-lookup"><span data-stu-id="bb9c2-109">Overriding properties and methods in derived classes</span></span>](~/docs/visual-basic/programming-guide/language-features/objects-and-classes/inheritance-basics.md#overriding-properties-and-methods-in-derived-classes)
