--- a/docs/visual-basic/misc/bc30273.md
+++ b/docs/visual-basic/misc/bc30273.md
@@ -1,36 +1,30 @@
 ---
-title: '&#39;です。&lt;指定子&gt;&#39; は、インターフェイス プロパティ宣言では無効'
+title: '&#39;&lt;指定子&gt;&#39;インターフェイス プロパティ宣言で無効です'
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-visual-basic
-ms.topic: article
 f1_keywords:
 - vbc30273
 - bc30273
 helpviewer_keywords:
 - BC30273
 ms.assetid: f10c4f5f-6176-4dba-99a9-b58f3b390fba
-caps.latest.revision: 8
-author: dotnet-bot
-ms.author: dotnetcontent
-ms.openlocfilehash: bde66b3e1b1d247e6d166dcd3a198fddfe5b30fc
-ms.sourcegitcommit: 4f3fef493080a43e70e951223894768d36ce430a
+ms.openlocfilehash: f03340b58a08671172571374f31487f1be41f426
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 11/21/2017
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33611397"
 ---
-# <a name="39ltspecifiergt39-is-not-valid-on-an-interface-property-declaration"></a><span data-ttu-id="18b04-102">&#39;です。&lt;指定子&gt;&#39; は、インターフェイス プロパティ宣言では無効</span><span class="sxs-lookup"><span data-stu-id="18b04-102">&#39;&lt;specifier&gt;&#39; is not valid on an interface property declaration</span></span>
-<span data-ttu-id="18b04-103">インターフェイス内の `Property` ステートメントに、 `Implements`のような無効なキーワードが含まれています。</span><span class="sxs-lookup"><span data-stu-id="18b04-103">A `Property` statement inside an interface contains an invalid keyword, such as `Implements`.</span></span> <span data-ttu-id="18b04-104">インターフェイスは、メンバーを定義することのみが可能で、実装はできません。</span><span class="sxs-lookup"><span data-stu-id="18b04-104">An interface can only define members, not implement them.</span></span>  
+# <a name="39ltspecifiergt39-is-not-valid-on-an-interface-property-declaration"></a><span data-ttu-id="bfe06-102">&#39;&lt;指定子&gt;&#39;インターフェイス プロパティ宣言で無効です</span><span class="sxs-lookup"><span data-stu-id="bfe06-102">&#39;&lt;specifier&gt;&#39; is not valid on an interface property declaration</span></span>
+<span data-ttu-id="bfe06-103">インターフェイス内の `Property` ステートメントに、 `Implements`のような無効なキーワードが含まれています。</span><span class="sxs-lookup"><span data-stu-id="bfe06-103">A `Property` statement inside an interface contains an invalid keyword, such as `Implements`.</span></span> <span data-ttu-id="bfe06-104">インターフェイスは、メンバーを定義することのみが可能で、実装はできません。</span><span class="sxs-lookup"><span data-stu-id="bfe06-104">An interface can only define members, not implement them.</span></span>  
   
- <span data-ttu-id="18b04-105">**エラー ID:** BC30273</span><span class="sxs-lookup"><span data-stu-id="18b04-105">**Error ID:** BC30273</span></span>  
+ <span data-ttu-id="bfe06-105">**エラー ID:** BC30273</span><span class="sxs-lookup"><span data-stu-id="bfe06-105">**Error ID:** BC30273</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="18b04-106">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="18b04-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="bfe06-106">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="bfe06-106">To correct this error</span></span>  
   
--   <span data-ttu-id="18b04-107">宣言ステートメントから使用できないキーワードを削除します。</span><span class="sxs-lookup"><span data-stu-id="18b04-107">Remove the invalid keyword from the declaration statement.</span></span>  
+-   <span data-ttu-id="bfe06-107">宣言ステートメントから使用できないキーワードを削除します。</span><span class="sxs-lookup"><span data-stu-id="bfe06-107">Remove the invalid keyword from the declaration statement.</span></span>  
   
--   <span data-ttu-id="18b04-108">インターフェイス メンバーの実装を、インターフェイスを実装するクラスに移動します。</span><span class="sxs-lookup"><span data-stu-id="18b04-108">Move the implementation of interface members to a class that implements the interface.</span></span>  
+-   <span data-ttu-id="bfe06-108">インターフェイス メンバーの実装を、インターフェイスを実装するクラスに移動します。</span><span class="sxs-lookup"><span data-stu-id="bfe06-108">Move the implementation of interface members to a class that implements the interface.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="18b04-109">関連項目</span><span class="sxs-lookup"><span data-stu-id="18b04-109">See Also</span></span>  
- [<span data-ttu-id="18b04-110">Interface ステートメント</span><span class="sxs-lookup"><span data-stu-id="18b04-110">Interface Statement</span></span>](../../visual-basic/language-reference/statements/interface-statement.md)  
- [<span data-ttu-id="18b04-111">Implements ステートメント</span><span class="sxs-lookup"><span data-stu-id="18b04-111">Implements Statement</span></span>](../../visual-basic/language-reference/statements/implements-statement.md)
+## <a name="see-also"></a><span data-ttu-id="bfe06-109">関連項目</span><span class="sxs-lookup"><span data-stu-id="bfe06-109">See Also</span></span>  
+ [<span data-ttu-id="bfe06-110">Interface ステートメント</span><span class="sxs-lookup"><span data-stu-id="bfe06-110">Interface Statement</span></span>](../../visual-basic/language-reference/statements/interface-statement.md)  
+ [<span data-ttu-id="bfe06-111">Implements ステートメント</span><span class="sxs-lookup"><span data-stu-id="bfe06-111">Implements Statement</span></span>](../../visual-basic/language-reference/statements/implements-statement.md)
