--- a/docs/visual-basic/misc/bc30283.md
+++ b/docs/visual-basic/misc/bc30283.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33613879"
 ---
 # <a name="39sub-new39-cannot-be-declared-39overrides39"></a><span data-ttu-id="1c36a-102">&#39;Sub New&#39;として宣言できません&#39;オーバーライドします。&#39;</span><span class="sxs-lookup"><span data-stu-id="1c36a-102">&#39;Sub New&#39; cannot be declared &#39;Overrides&#39;</span></span>
 <span data-ttu-id="1c36a-103">コンストラクターは、継承されたコンストラクターをオーバーライドすることを示します。</span><span class="sxs-lookup"><span data-stu-id="1c36a-103">A constructor indicates that it overrides an inherited constructor.</span></span> <span data-ttu-id="1c36a-104">コンストラクターはオーバーライドできません。</span><span class="sxs-lookup"><span data-stu-id="1c36a-104">Constructors cannot be overridden.</span></span>  
