--- a/docs/visual-basic/misc/bc30379.md
+++ b/docs/visual-basic/misc/bc30379.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33611451"
 ---
 # <a name="39catch39-cannot-appear-after-39finally39-within-a-39try39-statement"></a><span data-ttu-id="c7fdd-102">&#39;キャッチ&#39;後に表示されることはできません&#39;最後に&#39;内で、&#39;再試行&#39;ステートメント</span><span class="sxs-lookup"><span data-stu-id="c7fdd-102">&#39;Catch&#39; cannot appear after &#39;Finally&#39; within a &#39;Try&#39; statement</span></span>
 <span data-ttu-id="c7fdd-103">コード内で `Catch` ステートメントが、 `Finally` ステートメント ブロックの末尾の `Try` の後にあります。</span><span class="sxs-lookup"><span data-stu-id="c7fdd-103">A `Catch` statement appears in the code after the `Finally` ending a `Try` statement block.</span></span> <span data-ttu-id="c7fdd-104">`Catch` は `Try...Catch...Finally` ステートメント ブロック内に置く必要があります。</span><span class="sxs-lookup"><span data-stu-id="c7fdd-104">`Catch` must appear within a `Try...Catch...Finally` statement block.</span></span>  
