--- a/docs/visual-basic/misc/bc30408.md
+++ b/docs/visual-basic/misc/bc30408.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33611513"
 ---
 # <a name="method-39ltmethodnamegt39-does-not-have-the-same-signature-as-delegate-39ltdelegatenamegt39"></a><span data-ttu-id="69227-102">メソッド&#39; &lt;methodname&gt; &#39;デリゲートと同じシグネチャがありません&#39; &lt;delegatename&gt;&#39;</span><span class="sxs-lookup"><span data-stu-id="69227-102">Method &#39;&lt;methodname&gt;&#39; does not have the same signature as delegate &#39;&lt;delegatename&gt;&#39;</span></span>
 <span data-ttu-id="69227-103">メソッドのシグネチャと、使用しようとしているデリゲートのシグネチャが一致していません。</span><span class="sxs-lookup"><span data-stu-id="69227-103">There is a mismatch between the signatures of the method and delegate you are attempting to use.</span></span> <span data-ttu-id="69227-104">`Delegate` ステートメントは、デリゲート クラスのパラメーターの型と戻り値の型を定義します。</span><span class="sxs-lookup"><span data-stu-id="69227-104">The `Delegate` statement defines the parameter types and return types of a delegate class.</span></span> <span data-ttu-id="69227-105">パラメーター、型、および戻り値の型が一致するプロシージャを使用すると、このデリゲート型のインスタンスを作成できる場合があります。</span><span class="sxs-lookup"><span data-stu-id="69227-105">Any procedure with matching parameters, types, and return type may be used to create an instance of this delegate type.</span></span> <span data-ttu-id="69227-106">各デリゲート クラスでは、オブジェクト メソッドの仕様を渡すコンストラクターを定義します。</span><span class="sxs-lookup"><span data-stu-id="69227-106">Each delegate class defines a constructor that is passed the specification of an object method.</span></span>  
