--- a/docs/visual-basic/misc/bc30562.md
+++ b/docs/visual-basic/misc/bc30562.md
@@ -1,34 +1,28 @@
 ---
 title: '&#39;&lt;名前&gt;&#39;モジュール内の宣言間であいまいな&#39; &lt;modulename1&gt; &#39;と&#39; &lt;modulename2&gt;&#39;'
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-visual-basic
-ms.topic: article
 f1_keywords:
 - bc30562
 - vbc30562
 helpviewer_keywords:
 - BC30562
 ms.assetid: 5c230046-deb8-44d1-b25e-d4c6b59e0c3c
-caps.latest.revision: 8
-author: dotnet-bot
-ms.author: dotnetcontent
-ms.openlocfilehash: bd479f8974f0b1f249d9ecb6c5155311ce9169eb
-ms.sourcegitcommit: 86adcc06e35390f13c1e372c36d2e044f1fc31ef
+ms.openlocfilehash: 3190f5280d4a0b8aa42b42f3d51d3d5b0d2ef360
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 04/26/2018
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33611531"
 ---
-# <a name="39ltnamegt39-is-ambiguous-between-declarations-in-modules-39ltmodulename1gt39-and-39ltmodulename2gt39"></a><span data-ttu-id="8e6e3-102">&#39;&lt;名前&gt;&#39;モジュール内の宣言間であいまいな&#39; &lt;modulename1&gt; &#39;と&#39; &lt;modulename2&gt;&#39;</span><span class="sxs-lookup"><span data-stu-id="8e6e3-102">&#39;&lt;name&gt;&#39; is ambiguous between declarations in Modules &#39;&lt;modulename1&gt;&#39; and &#39;&lt;modulename2&gt;&#39;</span></span>
-<span data-ttu-id="8e6e3-103">あいまいな名前を指定したため、別の名前と競合しています。</span><span class="sxs-lookup"><span data-stu-id="8e6e3-103">You have provided a name that is ambiguous and therefore conflicts with another name.</span></span> <span data-ttu-id="8e6e3-104">Visual Basic コンパイラが、競合解決規則です。名は、自分で明確する必要があります。</span><span class="sxs-lookup"><span data-stu-id="8e6e3-104">The Visual Basic compiler does not have any conflict resolution rules; you must disambiguate names yourself.</span></span>  
+# <a name="39ltnamegt39-is-ambiguous-between-declarations-in-modules-39ltmodulename1gt39-and-39ltmodulename2gt39"></a><span data-ttu-id="22ca6-102">&#39;&lt;名前&gt;&#39;モジュール内の宣言間であいまいな&#39; &lt;modulename1&gt; &#39;と&#39; &lt;modulename2&gt;&#39;</span><span class="sxs-lookup"><span data-stu-id="22ca6-102">&#39;&lt;name&gt;&#39; is ambiguous between declarations in Modules &#39;&lt;modulename1&gt;&#39; and &#39;&lt;modulename2&gt;&#39;</span></span>
+<span data-ttu-id="22ca6-103">あいまいな名前を指定したため、別の名前と競合しています。</span><span class="sxs-lookup"><span data-stu-id="22ca6-103">You have provided a name that is ambiguous and therefore conflicts with another name.</span></span> <span data-ttu-id="22ca6-104">Visual Basic コンパイラが、競合解決規則です。名は、自分で明確する必要があります。</span><span class="sxs-lookup"><span data-stu-id="22ca6-104">The Visual Basic compiler does not have any conflict resolution rules; you must disambiguate names yourself.</span></span>  
   
- <span data-ttu-id="8e6e3-105">**エラー ID:** BC30562</span><span class="sxs-lookup"><span data-stu-id="8e6e3-105">**Error ID:** BC30562</span></span>  
+ <span data-ttu-id="22ca6-105">**エラー ID:** BC30562</span><span class="sxs-lookup"><span data-stu-id="22ca6-105">**Error ID:** BC30562</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="8e6e3-106">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="8e6e3-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="22ca6-106">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="22ca6-106">To correct this error</span></span>  
   
--   <span data-ttu-id="8e6e3-107">名前を完全修飾します。</span><span class="sxs-lookup"><span data-stu-id="8e6e3-107">Fully qualify the name.</span></span>  
+-   <span data-ttu-id="22ca6-107">名前を完全修飾します。</span><span class="sxs-lookup"><span data-stu-id="22ca6-107">Fully qualify the name.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="8e6e3-108">関連項目</span><span class="sxs-lookup"><span data-stu-id="8e6e3-108">See Also</span></span>  
- [<span data-ttu-id="8e6e3-109">Visual Basic における名前空間</span><span class="sxs-lookup"><span data-stu-id="8e6e3-109">Namespaces in Visual Basic</span></span>](../../visual-basic/programming-guide/program-structure/namespaces.md)  
- [<span data-ttu-id="8e6e3-110">Namespace ステートメント</span><span class="sxs-lookup"><span data-stu-id="8e6e3-110">Namespace Statement</span></span>](../../visual-basic/language-reference/statements/namespace-statement.md)
+## <a name="see-also"></a><span data-ttu-id="22ca6-108">関連項目</span><span class="sxs-lookup"><span data-stu-id="22ca6-108">See Also</span></span>  
+ [<span data-ttu-id="22ca6-109">Visual Basic における名前空間</span><span class="sxs-lookup"><span data-stu-id="22ca6-109">Namespaces in Visual Basic</span></span>](../../visual-basic/programming-guide/program-structure/namespaces.md)  
+ [<span data-ttu-id="22ca6-110">Namespace ステートメント</span><span class="sxs-lookup"><span data-stu-id="22ca6-110">Namespace Statement</span></span>](../../visual-basic/language-reference/statements/namespace-statement.md)
