--- a/docs/visual-basic/misc/bc30619.md
+++ b/docs/visual-basic/misc/bc30619.md
@@ -1,37 +1,31 @@
 ---
 title: ステートメントは、Enum 本体内部には記述できません
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-visual-basic
-ms.topic: article
 f1_keywords:
 - vbc30619
 - bc30619
 helpviewer_keywords:
 - BC30619
 ms.assetid: 5d91d601-2a2d-418c-ae26-791d14a6f3cd
-caps.latest.revision: 9
-author: dotnet-bot
-ms.author: dotnetcontent
-ms.openlocfilehash: 2c8b3daa781e8b45d0fcbbdbc0b3fcc97660451c
-ms.sourcegitcommit: bd1ef61f4bb794b25383d3d72e71041a5ced172e
+ms.openlocfilehash: d8bf4ae90645255e12dce561be17ea071c6333ca
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 10/18/2017
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33613151"
 ---
-# <a name="statement-cannot-appear-within-an-enum-body"></a><span data-ttu-id="da9c3-102">ステートメントは、Enum 本体内部には記述できません</span><span class="sxs-lookup"><span data-stu-id="da9c3-102">Statement cannot appear within an Enum body</span></span>
-<span data-ttu-id="da9c3-103">ステートメントは、Enum 本体内部には記述できません。</span><span class="sxs-lookup"><span data-stu-id="da9c3-103">Statement cannot occur within an Enum body.</span></span> <span data-ttu-id="da9c3-104">列挙型の末尾と見なされます。</span><span class="sxs-lookup"><span data-stu-id="da9c3-104">End of Enum assumed.</span></span>  
+# <a name="statement-cannot-appear-within-an-enum-body"></a><span data-ttu-id="a00d8-102">ステートメントは、Enum 本体内部には記述できません</span><span class="sxs-lookup"><span data-stu-id="a00d8-102">Statement cannot appear within an Enum body</span></span>
+<span data-ttu-id="a00d8-103">ステートメントは、Enum 本体内部には記述できません。</span><span class="sxs-lookup"><span data-stu-id="a00d8-103">Statement cannot occur within an Enum body.</span></span> <span data-ttu-id="a00d8-104">列挙型の末尾と見なされます。</span><span class="sxs-lookup"><span data-stu-id="a00d8-104">End of Enum assumed.</span></span>  
   
- <span data-ttu-id="da9c3-105">予期しない言語コンストラクトが見つかりました。</span><span class="sxs-lookup"><span data-stu-id="da9c3-105">An unexpected language construct was encountered.</span></span> <span data-ttu-id="da9c3-106">`End Enum` コンストラクトが不足しており、この時点より後のソース コードは列挙型の外部にあると想定されます。</span><span class="sxs-lookup"><span data-stu-id="da9c3-106">It is assumed that an `End Enum` construct is missing and that any source code after this point is outside the enumeration.</span></span>  
+ <span data-ttu-id="a00d8-105">予期しない言語コンストラクトが見つかりました。</span><span class="sxs-lookup"><span data-stu-id="a00d8-105">An unexpected language construct was encountered.</span></span> <span data-ttu-id="a00d8-106">`End Enum` コンストラクトが不足しており、この時点より後のソース コードは列挙型の外部にあると想定されます。</span><span class="sxs-lookup"><span data-stu-id="a00d8-106">It is assumed that an `End Enum` construct is missing and that any source code after this point is outside the enumeration.</span></span>  
   
- <span data-ttu-id="da9c3-107">**エラー ID:** BC30619</span><span class="sxs-lookup"><span data-stu-id="da9c3-107">**Error ID:** BC30619</span></span>  
+ <span data-ttu-id="a00d8-107">**エラー ID:** BC30619</span><span class="sxs-lookup"><span data-stu-id="a00d8-107">**Error ID:** BC30619</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="da9c3-108">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="da9c3-108">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="a00d8-108">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="a00d8-108">To correct this error</span></span>  
   
-1.  <span data-ttu-id="da9c3-109">列挙型の内部で使用されるコードの構文を確認します。</span><span class="sxs-lookup"><span data-stu-id="da9c3-109">Verify the syntax of the code used inside the enumeration.</span></span>  
+1.  <span data-ttu-id="a00d8-109">列挙型の内部で使用されるコードの構文を確認します。</span><span class="sxs-lookup"><span data-stu-id="a00d8-109">Verify the syntax of the code used inside the enumeration.</span></span>  
   
-2.  <span data-ttu-id="da9c3-110">インターフェイス定義が `End Enum` コンストラクトで終了していることを確認します。</span><span class="sxs-lookup"><span data-stu-id="da9c3-110">Make sure that the interface definition ends with an `End Enum` construct.</span></span>  
+2.  <span data-ttu-id="a00d8-110">インターフェイス定義が `End Enum` コンストラクトで終了していることを確認します。</span><span class="sxs-lookup"><span data-stu-id="a00d8-110">Make sure that the interface definition ends with an `End Enum` construct.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="da9c3-111">関連項目</span><span class="sxs-lookup"><span data-stu-id="da9c3-111">See Also</span></span>  
- [<span data-ttu-id="da9c3-112">Enum ステートメント</span><span class="sxs-lookup"><span data-stu-id="da9c3-112">Enum Statement</span></span>](../../visual-basic/language-reference/statements/enum-statement.md)
+## <a name="see-also"></a><span data-ttu-id="a00d8-111">関連項目</span><span class="sxs-lookup"><span data-stu-id="a00d8-111">See Also</span></span>  
+ [<span data-ttu-id="a00d8-112">Enum ステートメント</span><span class="sxs-lookup"><span data-stu-id="a00d8-112">Enum Statement</span></span>](../../visual-basic/language-reference/statements/enum-statement.md)
