--- a/docs/visual-basic/misc/bc30625.md
+++ b/docs/visual-basic/misc/bc30625.md
@@ -1,33 +1,27 @@
 ---
-title: '&#39;です。モジュール &#39;ステートメントの終わりに対応する &#39; にする必要があります。終了モジュール &#39;'
+title: '&#39;モジュール&#39;、対応するステートメントが終了する必要があります&#39;終了モジュール&#39;'
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-visual-basic
-ms.topic: article
 f1_keywords:
 - vbc30625
 - bc30625
 helpviewer_keywords:
 - BC30625
 ms.assetid: d51d5f1c-16f5-401c-be3a-0470eb9bb812
-caps.latest.revision: 8
-author: dotnet-bot
-ms.author: dotnetcontent
-ms.openlocfilehash: 7aab8c55e2d40b612dce1c910bda27d40a0bc250
-ms.sourcegitcommit: bd1ef61f4bb794b25383d3d72e71041a5ced172e
+ms.openlocfilehash: b592b34ee7da4c04fcaacc7e9e5df582fd36bb52
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 10/18/2017
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33616773"
 ---
-# <a name="39module39-statement-must-end-with-a-matching-39end-module39"></a><span data-ttu-id="75c1b-102">&#39;です。モジュール &#39;ステートメントの終わりに対応する &#39; にする必要があります。終了モジュール &#39;</span><span class="sxs-lookup"><span data-stu-id="75c1b-102">&#39;Module&#39; statement must end with a matching &#39;End Module&#39;</span></span>
-<span data-ttu-id="75c1b-103">モジュール ブロックは、 `End``Module` ステートメントで終了する必要があります。</span><span class="sxs-lookup"><span data-stu-id="75c1b-103">Module blocks must end with an `End``Module` statement.</span></span>  
+# <a name="39module39-statement-must-end-with-a-matching-39end-module39"></a><span data-ttu-id="7a8e6-102">&#39;モジュール&#39;、対応するステートメントが終了する必要があります&#39;終了モジュール&#39;</span><span class="sxs-lookup"><span data-stu-id="7a8e6-102">&#39;Module&#39; statement must end with a matching &#39;End Module&#39;</span></span>
+<span data-ttu-id="7a8e6-103">モジュール ブロックは、 `End``Module` ステートメントで終了する必要があります。</span><span class="sxs-lookup"><span data-stu-id="7a8e6-103">Module blocks must end with an `End``Module` statement.</span></span>  
   
- <span data-ttu-id="75c1b-104">**エラー ID:** BC30625</span><span class="sxs-lookup"><span data-stu-id="75c1b-104">**Error ID:** BC30625</span></span>  
+ <span data-ttu-id="7a8e6-104">**エラー ID:** BC30625</span><span class="sxs-lookup"><span data-stu-id="7a8e6-104">**Error ID:** BC30625</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="75c1b-105">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="75c1b-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="7a8e6-105">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="7a8e6-105">To correct this error</span></span>  
   
--   <span data-ttu-id="75c1b-106">`End Module` ステートメントを `Module` ブロックの最後に追加します。</span><span class="sxs-lookup"><span data-stu-id="75c1b-106">Add an `End Module` statement to the end of the `Module` block.</span></span>  
+-   <span data-ttu-id="7a8e6-106">`End Module` ステートメントを `Module` ブロックの最後に追加します。</span><span class="sxs-lookup"><span data-stu-id="7a8e6-106">Add an `End Module` statement to the end of the `Module` block.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="75c1b-107">関連項目</span><span class="sxs-lookup"><span data-stu-id="75c1b-107">See Also</span></span>  
- [<span data-ttu-id="75c1b-108">終了\<キーワード > ステートメント</span><span class="sxs-lookup"><span data-stu-id="75c1b-108">End \<keyword> Statement</span></span>](../../visual-basic/language-reference/statements/end-keyword-statement.md)
+## <a name="see-also"></a><span data-ttu-id="7a8e6-107">関連項目</span><span class="sxs-lookup"><span data-stu-id="7a8e6-107">See Also</span></span>  
+ [<span data-ttu-id="7a8e6-108">終了\<キーワード > ステートメント</span><span class="sxs-lookup"><span data-stu-id="7a8e6-108">End \<keyword> Statement</span></span>](../../visual-basic/language-reference/statements/end-keyword-statement.md)
