--- a/docs/visual-basic/misc/bc30667.md
+++ b/docs/visual-basic/misc/bc30667.md
@@ -1,35 +1,29 @@
 ---
-title: 'ParamArray パラメーターを宣言する必要があります (& a) #39 です。ByVal &#39;'
+title: ParamArray パラメーターを宣言する必要があります&#39;ByVal&#39;
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-visual-basic
-ms.topic: article
 f1_keywords:
 - vbc30667
 - bc30667
 helpviewer_keywords:
 - BC30667
 ms.assetid: 583e231f-a4c9-47aa-ae37-7bac43b0b318
-caps.latest.revision: 8
-author: dotnet-bot
-ms.author: dotnetcontent
-ms.openlocfilehash: dcaa2f9a31e9346234774768ea4e9522a694b122
-ms.sourcegitcommit: 4f3fef493080a43e70e951223894768d36ce430a
+ms.openlocfilehash: 8f48da3cf136a5f5e6e889239b199e111cce720e
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 11/21/2017
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33613472"
 ---
-# <a name="paramarray-parameters-must-be-declared-39byval39"></a><span data-ttu-id="effe6-102">ParamArray パラメーターを宣言する必要があります (& a) #39 です。ByVal &#39;</span><span class="sxs-lookup"><span data-stu-id="effe6-102">ParamArray parameters must be declared &#39;ByVal&#39;</span></span>
-<span data-ttu-id="effe6-103">`ParamArray` パラメーターは `ByRef` 修飾子を使用できません。</span><span class="sxs-lookup"><span data-stu-id="effe6-103">`ParamArray` parameters cannot use the `ByRef` modifier.</span></span>  
+# <a name="paramarray-parameters-must-be-declared-39byval39"></a><span data-ttu-id="160db-102">ParamArray パラメーターを宣言する必要があります&#39;ByVal&#39;</span><span class="sxs-lookup"><span data-stu-id="160db-102">ParamArray parameters must be declared &#39;ByVal&#39;</span></span>
+<span data-ttu-id="160db-103">`ParamArray` パラメーターは `ByRef` 修飾子を使用できません。</span><span class="sxs-lookup"><span data-stu-id="160db-103">`ParamArray` parameters cannot use the `ByRef` modifier.</span></span>  
   
- <span data-ttu-id="effe6-104">**エラー ID:** BC30667</span><span class="sxs-lookup"><span data-stu-id="effe6-104">**Error ID:** BC30667</span></span>  
+ <span data-ttu-id="160db-104">**エラー ID:** BC30667</span><span class="sxs-lookup"><span data-stu-id="160db-104">**Error ID:** BC30667</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="effe6-105">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="effe6-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="160db-105">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="160db-105">To correct this error</span></span>  
   
--   <span data-ttu-id="effe6-106">`ParamArray` 修飾子を使用して `ByVal` パラメーターを宣言します。</span><span class="sxs-lookup"><span data-stu-id="effe6-106">Declare `ParamArray` parameters using the `ByVal` modifier.</span></span>  
+-   <span data-ttu-id="160db-106">`ParamArray` 修飾子を使用して `ByVal` パラメーターを宣言します。</span><span class="sxs-lookup"><span data-stu-id="160db-106">Declare `ParamArray` parameters using the `ByVal` modifier.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="effe6-107">関連項目</span><span class="sxs-lookup"><span data-stu-id="effe6-107">See Also</span></span>  
- [<span data-ttu-id="effe6-108">ParamArray</span><span class="sxs-lookup"><span data-stu-id="effe6-108">ParamArray</span></span>](../../visual-basic/language-reference/modifiers/paramarray.md)  
- [<span data-ttu-id="effe6-109">ByRef</span><span class="sxs-lookup"><span data-stu-id="effe6-109">ByRef</span></span>](../../visual-basic/language-reference/modifiers/byref.md)  
- [<span data-ttu-id="effe6-110">ByVal</span><span class="sxs-lookup"><span data-stu-id="effe6-110">ByVal</span></span>](../../visual-basic/language-reference/modifiers/byval.md)
+## <a name="see-also"></a><span data-ttu-id="160db-107">関連項目</span><span class="sxs-lookup"><span data-stu-id="160db-107">See Also</span></span>  
+ [<span data-ttu-id="160db-108">ParamArray</span><span class="sxs-lookup"><span data-stu-id="160db-108">ParamArray</span></span>](../../visual-basic/language-reference/modifiers/paramarray.md)  
+ [<span data-ttu-id="160db-109">ByRef</span><span class="sxs-lookup"><span data-stu-id="160db-109">ByRef</span></span>](../../visual-basic/language-reference/modifiers/byref.md)  
+ [<span data-ttu-id="160db-110">ByVal</span><span class="sxs-lookup"><span data-stu-id="160db-110">ByVal</span></span>](../../visual-basic/language-reference/modifiers/byval.md)
