--- a/docs/visual-basic/misc/bc30678.md
+++ b/docs/visual-basic/misc/bc30678.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33618460"
 ---
 # <a name="39end39-statement-not-valid"></a><span data-ttu-id="18ddb-102">&#39;終了&#39;ステートメントは無効です</span><span class="sxs-lookup"><span data-stu-id="18ddb-102">&#39;End&#39; statement not valid</span></span>
 <span data-ttu-id="18ddb-103">`End` キーワードが正しくない方法で使用されているか、または現在のコンテキストで適切ではありません。</span><span class="sxs-lookup"><span data-stu-id="18ddb-103">The `End` keyword is used incorrectly or is inappropriate in the current context.</span></span>  
