--- a/docs/visual-basic/misc/bc30691.md
+++ b/docs/visual-basic/misc/bc30691.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33617664"
 ---
 # <a name="39lttypenamegt39-is-a-type-in-39ltcontainernamegt39-and-cannot-be-used-as-an-expression"></a><span data-ttu-id="98358-102">&#39;&lt;typename&gt; &#39;内の型は、 &#39; &lt;containername&gt; &#39; 、式として使用できません</span><span class="sxs-lookup"><span data-stu-id="98358-102">&#39;&lt;typename&gt;&#39; is a type in &#39;&lt;containername&gt;&#39; and cannot be used as an expression</span></span>
 <span data-ttu-id="98358-103">使用中の名前が型の名前として既に宣言されているため、式では使用できません。</span><span class="sxs-lookup"><span data-stu-id="98358-103">One of the names being used is already declared as the name of a type, and cannot be used in an expression.</span></span>  
