--- a/docs/visual-basic/misc/bc30710.md
+++ b/docs/visual-basic/misc/bc30710.md
@@ -1,33 +1,27 @@
 ---
 title: 式の終わりが必要です。
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-visual-basic
-ms.topic: article
 f1_keywords:
 - bc30710
 - vbc30710
 helpviewer_keywords:
 - BC30710
 ms.assetid: 72b29abc-675b-4a68-a466-0dca5b09b9b3
-caps.latest.revision: 9
-author: dotnet-bot
-ms.author: dotnetcontent
-ms.openlocfilehash: 6c948b724d39df254ed1f0f49e535049cc4c22cc
-ms.sourcegitcommit: bd1ef61f4bb794b25383d3d72e71041a5ced172e
+ms.openlocfilehash: 77fc44a37b67248b76362b9a0786051b6d006ff0
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 10/18/2017
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33615067"
 ---
-# <a name="end-of-expression-expected"></a><span data-ttu-id="eaf2a-102">式の終わりが必要です。</span><span class="sxs-lookup"><span data-stu-id="eaf2a-102">End of expression expected</span></span>
-<span data-ttu-id="eaf2a-103">そうでなければ完成している式の末尾に余分な文字が見つかりました。</span><span class="sxs-lookup"><span data-stu-id="eaf2a-103">Extra characters were found at the end of an otherwise complete expression.</span></span>  
+# <a name="end-of-expression-expected"></a><span data-ttu-id="99bd3-102">式の終わりが必要です。</span><span class="sxs-lookup"><span data-stu-id="99bd3-102">End of expression expected</span></span>
+<span data-ttu-id="99bd3-103">そうでなければ完成している式の末尾に余分な文字が見つかりました。</span><span class="sxs-lookup"><span data-stu-id="99bd3-103">Extra characters were found at the end of an otherwise complete expression.</span></span>  
   
- <span data-ttu-id="eaf2a-104">**エラー ID:** BC30710</span><span class="sxs-lookup"><span data-stu-id="eaf2a-104">**Error ID:** BC30710</span></span>  
+ <span data-ttu-id="99bd3-104">**エラー ID:** BC30710</span><span class="sxs-lookup"><span data-stu-id="99bd3-104">**Error ID:** BC30710</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="eaf2a-105">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="eaf2a-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="99bd3-105">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="99bd3-105">To correct this error</span></span>  
   
--   <span data-ttu-id="eaf2a-106">オブジェクトまたはステートメントの構文を確認します。</span><span class="sxs-lookup"><span data-stu-id="eaf2a-106">Verify the syntax of the object or statement.</span></span>  
+-   <span data-ttu-id="99bd3-106">オブジェクトまたはステートメントの構文を確認します。</span><span class="sxs-lookup"><span data-stu-id="99bd3-106">Verify the syntax of the object or statement.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="eaf2a-107">関連項目</span><span class="sxs-lookup"><span data-stu-id="eaf2a-107">See Also</span></span>  
- [<span data-ttu-id="eaf2a-108">Visual Studio でのデバッグ</span><span class="sxs-lookup"><span data-stu-id="eaf2a-108">Debugging in Visual Studio</span></span>](/visualstudio/debugger/debugging-in-visual-studio)
+## <a name="see-also"></a><span data-ttu-id="99bd3-107">関連項目</span><span class="sxs-lookup"><span data-stu-id="99bd3-107">See Also</span></span>  
+ [<span data-ttu-id="99bd3-108">Visual Studio でのデバッグ</span><span class="sxs-lookup"><span data-stu-id="99bd3-108">Debugging in Visual Studio</span></span>](/visualstudio/debugger/debugging-in-visual-studio)
