--- a/docs/visual-basic/misc/bc30721.md
+++ b/docs/visual-basic/misc/bc30721.md
@@ -1,33 +1,27 @@
 ---
 title: 式またはステートメントの評価が停止されました
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-visual-basic
-ms.topic: article
 f1_keywords:
 - bc30721
 - vbc30721
 helpviewer_keywords:
 - BC30721
 ms.assetid: a61fb5ee-bd7d-4fc3-a01b-ab30d31cebe6
-caps.latest.revision: 9
-author: dotnet-bot
-ms.author: dotnetcontent
-ms.openlocfilehash: ebc3a457d7b88890263d0586b5fa55f9f8785ec8
-ms.sourcegitcommit: bd1ef61f4bb794b25383d3d72e71041a5ced172e
+ms.openlocfilehash: 221fd805b3a6c679634fba0ca0cbd9c4273817b9
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 10/18/2017
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33614274"
 ---
-# <a name="evaluation-of-expression-or-statement-stopped"></a><span data-ttu-id="2c122-102">式またはステートメントの評価が停止されました</span><span class="sxs-lookup"><span data-stu-id="2c122-102">Evaluation of expression or statement stopped</span></span>
-<span data-ttu-id="2c122-103">**[評価の停止]** メニュー項目が選択されたため、評価が停止されました。</span><span class="sxs-lookup"><span data-stu-id="2c122-103">The **Stop Evaluation** menu item was selected, causing evaluation to stop.</span></span>  
+# <a name="evaluation-of-expression-or-statement-stopped"></a><span data-ttu-id="afcf5-102">式またはステートメントの評価が停止されました</span><span class="sxs-lookup"><span data-stu-id="afcf5-102">Evaluation of expression or statement stopped</span></span>
+<span data-ttu-id="afcf5-103">**[評価の停止]** メニュー項目が選択されたため、評価が停止されました。</span><span class="sxs-lookup"><span data-stu-id="afcf5-103">The **Stop Evaluation** menu item was selected, causing evaluation to stop.</span></span>  
   
- <span data-ttu-id="2c122-104">**エラー ID:** BC30721</span><span class="sxs-lookup"><span data-stu-id="2c122-104">**Error ID:** BC30721</span></span>  
+ <span data-ttu-id="afcf5-104">**エラー ID:** BC30721</span><span class="sxs-lookup"><span data-stu-id="afcf5-104">**Error ID:** BC30721</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="2c122-105">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="2c122-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="afcf5-105">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="afcf5-105">To correct this error</span></span>  
   
--   <span data-ttu-id="2c122-106">**[評価の停止]**を選択しなければ、引き続き実行できます。</span><span class="sxs-lookup"><span data-stu-id="2c122-106">Allow execution to continue without selecting **Stop Evaluation**.</span></span>  
+-   <span data-ttu-id="afcf5-106">**[評価の停止]** を選択しなければ、引き続き実行できます。</span><span class="sxs-lookup"><span data-stu-id="afcf5-106">Allow execution to continue without selecting **Stop Evaluation**.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="2c122-107">関連項目</span><span class="sxs-lookup"><span data-stu-id="2c122-107">See Also</span></span>  
- [<span data-ttu-id="2c122-108">Visual Studio でのデバッグ</span><span class="sxs-lookup"><span data-stu-id="2c122-108">Debugging in Visual Studio</span></span>](/visualstudio/debugger/debugging-in-visual-studio)
+## <a name="see-also"></a><span data-ttu-id="afcf5-107">関連項目</span><span class="sxs-lookup"><span data-stu-id="afcf5-107">See Also</span></span>  
+ [<span data-ttu-id="afcf5-108">Visual Studio でのデバッグ</span><span class="sxs-lookup"><span data-stu-id="afcf5-108">Debugging in Visual Studio</span></span>](/visualstudio/debugger/debugging-in-visual-studio)
