--- a/docs/visual-basic/misc/bc30732.md
+++ b/docs/visual-basic/misc/bc30732.md
@@ -1,33 +1,27 @@
 ---
 title: Web メソッドを、デバッグ ウィンドウで評価することはできません
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-visual-basic
-ms.topic: article
 f1_keywords:
 - bc30732
 - vbc30732
 helpviewer_keywords:
 - BC30732
 ms.assetid: a199fa1b-486c-4fa3-9dc0-19d7b4553af0
-caps.latest.revision: 8
-author: dotnet-bot
-ms.author: dotnetcontent
-ms.openlocfilehash: b2428285f4f8bed75a92d5698cd4ffc448dcb510
-ms.sourcegitcommit: bd1ef61f4bb794b25383d3d72e71041a5ced172e
+ms.openlocfilehash: bed810bd8a77c09b00e396dd35eb4dd4f944f949
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 10/18/2017
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33613116"
 ---
-# <a name="web-methods-cannot-be-evaluated-in-debug-windows"></a><span data-ttu-id="44a2f-102">Web メソッドを、デバッグ ウィンドウで評価することはできません</span><span class="sxs-lookup"><span data-stu-id="44a2f-102">Web methods cannot be evaluated in debug windows</span></span>
-<span data-ttu-id="44a2f-103">XML Web サービス メソッドは、デバッグ ウィンドウ内でテストできません。</span><span class="sxs-lookup"><span data-stu-id="44a2f-103">XML Web service methods cannot be tested within the debug window.</span></span>  
+# <a name="web-methods-cannot-be-evaluated-in-debug-windows"></a><span data-ttu-id="d6a42-102">Web メソッドを、デバッグ ウィンドウで評価することはできません</span><span class="sxs-lookup"><span data-stu-id="d6a42-102">Web methods cannot be evaluated in debug windows</span></span>
+<span data-ttu-id="d6a42-103">XML Web サービス メソッドは、デバッグ ウィンドウ内でテストできません。</span><span class="sxs-lookup"><span data-stu-id="d6a42-103">XML Web service methods cannot be tested within the debug window.</span></span>  
   
- <span data-ttu-id="44a2f-104">**エラー ID:** BC30732</span><span class="sxs-lookup"><span data-stu-id="44a2f-104">**Error ID:** BC30732</span></span>  
+ <span data-ttu-id="d6a42-104">**エラー ID:** BC30732</span><span class="sxs-lookup"><span data-stu-id="d6a42-104">**Error ID:** BC30732</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="44a2f-105">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="44a2f-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="d6a42-105">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="d6a42-105">To correct this error</span></span>  
   
--   <span data-ttu-id="44a2f-106">コード エディターから XML Web サービス メソッドをテストします。</span><span class="sxs-lookup"><span data-stu-id="44a2f-106">Test XML Web service methods from the Code Editor.</span></span>  
+-   <span data-ttu-id="d6a42-106">コード エディターから XML Web サービス メソッドをテストします。</span><span class="sxs-lookup"><span data-stu-id="d6a42-106">Test XML Web service methods from the Code Editor.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="44a2f-107">関連項目</span><span class="sxs-lookup"><span data-stu-id="44a2f-107">See Also</span></span>  
- [<span data-ttu-id="44a2f-108">Visual Studio でのデバッグ</span><span class="sxs-lookup"><span data-stu-id="44a2f-108">Debugging in Visual Studio</span></span>](/visualstudio/debugger/debugging-in-visual-studio)
+## <a name="see-also"></a><span data-ttu-id="d6a42-107">関連項目</span><span class="sxs-lookup"><span data-stu-id="d6a42-107">See Also</span></span>  
+ [<span data-ttu-id="d6a42-108">Visual Studio でのデバッグ</span><span class="sxs-lookup"><span data-stu-id="d6a42-108">Debugging in Visual Studio</span></span>](/visualstudio/debugger/debugging-in-visual-studio)
