--- a/docs/visual-basic/misc/bc30739.md
+++ b/docs/visual-basic/misc/bc30739.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33612035"
 ---
 # <a name="39raiseevent39-statements-are-not-valid-in-the-immediate-window"></a><span data-ttu-id="16d36-102">&#39;RaiseEvent&#39;ステートメントは、イミディ エイト ウィンドウでは有効ではありません。</span><span class="sxs-lookup"><span data-stu-id="16d36-102">&#39;RaiseEvent&#39; statements are not valid in the Immediate window</span></span>
 <span data-ttu-id="16d36-103">`RaiseEvent` ステートメントは、 **イミディエイト** ウィンドウでは使用できません。</span><span class="sxs-lookup"><span data-stu-id="16d36-103">`RaiseEvent` statements cannot be used in the **Immediate** window.</span></span>  
