--- a/docs/visual-basic/misc/bc30748.md
+++ b/docs/visual-basic/misc/bc30748.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33614989"
 ---
 # <a name="cannot-convert-to-39lttypegt39"></a><span data-ttu-id="3c45c-102">変換できません&#39;&lt;型。&gt;&#39;</span><span class="sxs-lookup"><span data-stu-id="3c45c-102">Cannot convert to &#39;&lt;type&gt;&#39;</span></span>
 <span data-ttu-id="3c45c-103">無効な変換を行おうとしました。</span><span class="sxs-lookup"><span data-stu-id="3c45c-103">An invalid conversion was attempted.</span></span>  
