--- a/docs/visual-basic/misc/bc30752.md
+++ b/docs/visual-basic/misc/bc30752.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33615002"
 ---
 # <a name="39on-error39-statements-are-not-valid-within-39synclock39-statements"></a><span data-ttu-id="56fe4-102">&#39;エラー&#39;ステートメントは内で有効ではありません&#39;SyncLock&#39;ステートメント。</span><span class="sxs-lookup"><span data-stu-id="56fe4-102">&#39;On Error&#39; statements are not valid within &#39;SyncLock&#39; statements</span></span>
 <span data-ttu-id="56fe4-103">`On Error` ステートメントはスレッドの同期を中断するため、 `SyncLock` ブロック内では使用できません。</span><span class="sxs-lookup"><span data-stu-id="56fe4-103">`On Error` statements are cannot be used in `SyncLock` blocks because they would disrupt thread synchronization.</span></span>  
