--- a/docs/visual-basic/misc/bc30782.md
+++ b/docs/visual-basic/misc/bc30782.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33616419"
 ---
 # <a name="39continue-do39-can-only-appear-inside-a-39do39-statement"></a><span data-ttu-id="9bd45-102">&#39;Continue Do&#39;内でのみ表示できます、&#39;は&#39;ステートメント</span><span class="sxs-lookup"><span data-stu-id="9bd45-102">&#39;Continue Do&#39; can only appear inside a &#39;Do&#39; statement</span></span>
 <span data-ttu-id="9bd45-103">`Continue Do` ステートメントは、 `Do...Loop` ループ内でのみ使用できます。</span><span class="sxs-lookup"><span data-stu-id="9bd45-103">A `Continue Do` statement can only appear within a `Do...Loop` loop.</span></span>  
