--- a/docs/visual-basic/misc/bc30797.md
+++ b/docs/visual-basic/misc/bc30797.md
@@ -1,41 +1,35 @@
 ---
-title: "プロジェクト レベル インポート &#39; のエラー&lt;qualifiedelementname&gt;&#39;で &#39;&lt;発生しました&gt;&#39;: &lt;errormessage&gt;"
+title: 'プロジェクト レベル インポートでエラー &#39; &lt;qualifiedelementname&gt; &#39;で&#39;&lt;が発生しました&gt;&#39; : &lt;errormessage&gt;'
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-visual-basic
-ms.topic: article
 f1_keywords:
 - BC30797
 - vbc30797
 helpviewer_keywords:
 - BC30797
 ms.assetid: 529f354f-f255-4adc-ab21-bd1796e58d69
-caps.latest.revision: 
-author: dotnet-bot
-ms.author: dotnetcontent
-ms.openlocfilehash: d466edb38e05305fa777213db85eb749546d8bf9
-ms.sourcegitcommit: 34ec7753acf76f90a0fa845235ef06663dc9e36e
+ms.openlocfilehash: d18a77e0d1d51823754ddedb11fc4e5f38f94607
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 12/21/2017
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33617498"
 ---
-# <a name="error-in-project-level-import-39ltqualifiedelementnamegt39-at-39ltqualifiedcontainernamegt39--lterrormessagegt"></a><span data-ttu-id="094ab-102">プロジェクト レベル インポート &#39; のエラー&lt;qualifiedelementname&gt;&#39;で &#39;&lt;発生しました&gt;&#39;: &lt;errormessage&gt;</span><span class="sxs-lookup"><span data-stu-id="094ab-102">Error in project-level import &#39;&lt;qualifiedelementname&gt;&#39; at &#39;&lt;qualifiedcontainername&gt;&#39; : &lt;errormessage&gt;</span></span>
-<span data-ttu-id="094ab-103">ステートメントが別のアセンブリで定義されたプログラミング要素にアクセスしていますが、そのアセンブリへのプロジェクト参照がありません。</span><span class="sxs-lookup"><span data-stu-id="094ab-103">A statement accesses a programming element that is defined in another assembly, but there is no project reference to that assembly.</span></span>  
+# <a name="error-in-project-level-import-39ltqualifiedelementnamegt39-at-39ltqualifiedcontainernamegt39--lterrormessagegt"></a><span data-ttu-id="e6872-102">プロジェクト レベル インポートでエラー &#39; &lt;qualifiedelementname&gt; &#39;で&#39;&lt;が発生しました&gt;&#39; : &lt;errormessage&gt;</span><span class="sxs-lookup"><span data-stu-id="e6872-102">Error in project-level import &#39;&lt;qualifiedelementname&gt;&#39; at &#39;&lt;qualifiedcontainername&gt;&#39; : &lt;errormessage&gt;</span></span>
+<span data-ttu-id="e6872-103">ステートメントが別のアセンブリで定義されたプログラミング要素にアクセスしていますが、そのアセンブリへのプロジェクト参照がありません。</span><span class="sxs-lookup"><span data-stu-id="e6872-103">A statement accesses a programming element that is defined in another assembly, but there is no project reference to that assembly.</span></span>  
   
- <span data-ttu-id="094ab-104">たとえば、 `desiredEnumeration` という修飾文字列を使用して、 `otherNamespace.otherClass.desiredEnumeration`という名前の列挙体にアクセスするコードがあるとします。</span><span class="sxs-lookup"><span data-stu-id="094ab-104">For example, your code might be accessing an enumeration named `desiredEnumeration` using the qualification string `otherNamespace.otherClass.desiredEnumeration`.</span></span> <span data-ttu-id="094ab-105">ユーザーのプロジェクトの参照の中から、コンパイラが `otherNamespace.otherClass` を見つけることができない場合に、このエラーが生成されます。</span><span class="sxs-lookup"><span data-stu-id="094ab-105">If the compiler cannot find `otherNamespace.otherClass` among your project's references, it generates this error.</span></span>  
+ <span data-ttu-id="e6872-104">たとえば、 `desiredEnumeration` という修飾文字列を使用して、 `otherNamespace.otherClass.desiredEnumeration`という名前の列挙体にアクセスするコードがあるとします。</span><span class="sxs-lookup"><span data-stu-id="e6872-104">For example, your code might be accessing an enumeration named `desiredEnumeration` using the qualification string `otherNamespace.otherClass.desiredEnumeration`.</span></span> <span data-ttu-id="e6872-105">ユーザーのプロジェクトの参照の中から、コンパイラが `otherNamespace.otherClass` を見つけることができない場合に、このエラーが生成されます。</span><span class="sxs-lookup"><span data-stu-id="e6872-105">If the compiler cannot find `otherNamespace.otherClass` among your project's references, it generates this error.</span></span>  
   
- <span data-ttu-id="094ab-106">**エラー ID:** BC30797</span><span class="sxs-lookup"><span data-stu-id="094ab-106">**Error ID:** BC30797</span></span>  
+ <span data-ttu-id="e6872-106">**エラー ID:** BC30797</span><span class="sxs-lookup"><span data-stu-id="e6872-106">**Error ID:** BC30797</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="094ab-107">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="094ab-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="e6872-107">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="e6872-107">To correct this error</span></span>  
   
-1.  <span data-ttu-id="094ab-108">プログラミング要素の修飾文字列にあるすべての要素のスペルが正しいことを確認します。</span><span class="sxs-lookup"><span data-stu-id="094ab-108">Make sure every element in the qualification string of the programming element is spelled correctly.</span></span>  
+1.  <span data-ttu-id="e6872-108">プログラミング要素の修飾文字列にあるすべての要素のスペルが正しいことを確認します。</span><span class="sxs-lookup"><span data-stu-id="e6872-108">Make sure every element in the qualification string of the programming element is spelled correctly.</span></span>  
   
-2.  <span data-ttu-id="094ab-109">プロジェクトに、目的のプログラミング要素を定義しているアセンブリへの参照があることを確認します。</span><span class="sxs-lookup"><span data-stu-id="094ab-109">Make sure your project has a reference to the assembly defining the desired programming element.</span></span>  
+2.  <span data-ttu-id="e6872-109">プロジェクトに、目的のプログラミング要素を定義しているアセンブリへの参照があることを確認します。</span><span class="sxs-lookup"><span data-stu-id="e6872-109">Make sure your project has a reference to the assembly defining the desired programming element.</span></span>  
   
-3.  <span data-ttu-id="094ab-110">エラー メッセージを調べて、適切なアクションを実行します。</span><span class="sxs-lookup"><span data-stu-id="094ab-110">Consult the error message and take appropriate action.</span></span>  
+3.  <span data-ttu-id="e6872-110">エラー メッセージを調べて、適切なアクションを実行します。</span><span class="sxs-lookup"><span data-stu-id="e6872-110">Consult the error message and take appropriate action.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="094ab-111">参照</span><span class="sxs-lookup"><span data-stu-id="094ab-111">See Also</span></span>  
+## <a name="see-also"></a><span data-ttu-id="e6872-111">関連項目</span><span class="sxs-lookup"><span data-stu-id="e6872-111">See Also</span></span>  
   
- [<span data-ttu-id="094ab-112">プロジェクトおよびソリューションのプロパティの管理</span><span class="sxs-lookup"><span data-stu-id="094ab-112">Managing Project and Solution Properties</span></span>](/visualstudio/ide/managing-project-and-solution-properties)  
+ [<span data-ttu-id="e6872-112">プロジェクトおよびソリューションのプロパティの管理</span><span class="sxs-lookup"><span data-stu-id="e6872-112">Managing Project and Solution Properties</span></span>](/visualstudio/ide/managing-project-and-solution-properties)  
  
