--- a/docs/visual-basic/misc/bc30805.md
+++ b/docs/visual-basic/misc/bc30805.md
@@ -1,35 +1,29 @@
 ---
-title: "配列宣言で下限を指定することはできません"
+title: 配列宣言で下限を指定することはできません
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-visual-basic
-ms.topic: article
 f1_keywords:
 - vbc30805
 - bc30805
 helpviewer_keywords:
 - BC30805
 ms.assetid: f2055387-f4dc-4366-89fb-d752929a0258
-caps.latest.revision: 
-author: dotnet-bot
-ms.author: dotnetcontent
-ms.openlocfilehash: 574f6fa61b19639e44dd4c371948d40adac54855
-ms.sourcegitcommit: 34ec7753acf76f90a0fa845235ef06663dc9e36e
+ms.openlocfilehash: 87e4dd924327eef510c1acf174de3c21f68183d4
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 12/21/2017
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33614960"
 ---
-# <a name="array-declarations-cannot-specify-lower-bounds"></a><span data-ttu-id="ae1c0-102">配列宣言で下限を指定することはできません</span><span class="sxs-lookup"><span data-stu-id="ae1c0-102">Array declarations cannot specify lower bounds</span></span>
-<span data-ttu-id="ae1c0-103">配列の下限は常に 0 です。</span><span class="sxs-lookup"><span data-stu-id="ae1c0-103">Arrays always have a lower bound of zero.</span></span> <span data-ttu-id="ae1c0-104">コードを読みやすくするための下限として 0 を指定することができます。</span><span class="sxs-lookup"><span data-stu-id="ae1c0-104">You can specify zero as the lower bound to make your code more readable.</span></span> <span data-ttu-id="ae1c0-105">ただし、下限としてその他の値を指定できません。</span><span class="sxs-lookup"><span data-stu-id="ae1c0-105">However, you cannot specify any other value for the lower bound.</span></span>  
+# <a name="array-declarations-cannot-specify-lower-bounds"></a><span data-ttu-id="6db5b-102">配列宣言で下限を指定することはできません</span><span class="sxs-lookup"><span data-stu-id="6db5b-102">Array declarations cannot specify lower bounds</span></span>
+<span data-ttu-id="6db5b-103">配列の下限は常に 0 です。</span><span class="sxs-lookup"><span data-stu-id="6db5b-103">Arrays always have a lower bound of zero.</span></span> <span data-ttu-id="6db5b-104">コードを読みやすくするための下限として 0 を指定することができます。</span><span class="sxs-lookup"><span data-stu-id="6db5b-104">You can specify zero as the lower bound to make your code more readable.</span></span> <span data-ttu-id="6db5b-105">ただし、下限としてその他の値を指定できません。</span><span class="sxs-lookup"><span data-stu-id="6db5b-105">However, you cannot specify any other value for the lower bound.</span></span>  
   
- <span data-ttu-id="ae1c0-106">**エラー ID:** BC30805</span><span class="sxs-lookup"><span data-stu-id="ae1c0-106">**Error ID:** BC30805</span></span>  
+ <span data-ttu-id="6db5b-106">**エラー ID:** BC30805</span><span class="sxs-lookup"><span data-stu-id="6db5b-106">**Error ID:** BC30805</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="ae1c0-107">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="ae1c0-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="6db5b-107">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="6db5b-107">To correct this error</span></span>  
   
--   <span data-ttu-id="ae1c0-108">配列の次元を要素の総数よりも 1 小さい値に設定します。</span><span class="sxs-lookup"><span data-stu-id="ae1c0-108">Dimension arrays as one less than the total number of elements.</span></span> <span data-ttu-id="ae1c0-109">たとえば、 `Dim y(6)` と `Dim x(3 To 9)`のサイズは同じです (7 つの要素)。</span><span class="sxs-lookup"><span data-stu-id="ae1c0-109">For example, `Dim y(6)` has the same size (7 elements) as `Dim x(3 To 9)`.</span></span> <span data-ttu-id="ae1c0-110">`Dim y(0 To 6)`を指定することもできます。</span><span class="sxs-lookup"><span data-stu-id="ae1c0-110">You can also specify `Dim y(0 To 6)`.</span></span>  
+-   <span data-ttu-id="6db5b-108">配列の次元を要素の総数よりも 1 小さい値に設定します。</span><span class="sxs-lookup"><span data-stu-id="6db5b-108">Dimension arrays as one less than the total number of elements.</span></span> <span data-ttu-id="6db5b-109">たとえば、 `Dim y(6)` と `Dim x(3 To 9)`のサイズは同じです (7 つの要素)。</span><span class="sxs-lookup"><span data-stu-id="6db5b-109">For example, `Dim y(6)` has the same size (7 elements) as `Dim x(3 To 9)`.</span></span> <span data-ttu-id="6db5b-110">`Dim y(0 To 6)`を指定することもできます。</span><span class="sxs-lookup"><span data-stu-id="6db5b-110">You can also specify `Dim y(0 To 6)`.</span></span>  
   
--   <span data-ttu-id="ae1c0-111">オフセットを使用して、0 以外の下限をシミュレートします。</span><span class="sxs-lookup"><span data-stu-id="ae1c0-111">Use offsets to simulate nonzero lower bounds.</span></span> <span data-ttu-id="ae1c0-112">次の例では、次元を 3 から 9 に設定した配列をシミュレートします。</span><span class="sxs-lookup"><span data-stu-id="ae1c0-112">The following example simulates an array dimensioned from 3 to 9.</span></span>  
+-   <span data-ttu-id="6db5b-111">オフセットを使用して、0 以外の下限をシミュレートします。</span><span class="sxs-lookup"><span data-stu-id="6db5b-111">Use offsets to simulate nonzero lower bounds.</span></span> <span data-ttu-id="6db5b-112">次の例では、次元を 3 から 9 に設定した配列をシミュレートします。</span><span class="sxs-lookup"><span data-stu-id="6db5b-112">The following example simulates an array dimensioned from 3 to 9.</span></span>  
   
     ```  
     Const offset As Integer = 3  
@@ -43,7 +37,7 @@ ms.lasthandoff: 12/21/2017
     ' corresponding index of y.  
     ```  
   
-## <a name="see-also"></a><span data-ttu-id="ae1c0-113">参照</span><span class="sxs-lookup"><span data-stu-id="ae1c0-113">See Also</span></span>  
- [<span data-ttu-id="ae1c0-114">配列</span><span class="sxs-lookup"><span data-stu-id="ae1c0-114">Arrays</span></span>](../../visual-basic/programming-guide/language-features/arrays/index.md)  
- [<span data-ttu-id="ae1c0-115">Array Dimensions in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="ae1c0-115">Array Dimensions in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/arrays/array-dimensions.md)  
+## <a name="see-also"></a><span data-ttu-id="6db5b-113">関連項目</span><span class="sxs-lookup"><span data-stu-id="6db5b-113">See Also</span></span>  
+ [<span data-ttu-id="6db5b-114">配列</span><span class="sxs-lookup"><span data-stu-id="6db5b-114">Arrays</span></span>](../../visual-basic/programming-guide/language-features/arrays/index.md)  
+ [<span data-ttu-id="6db5b-115">Array Dimensions in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="6db5b-115">Array Dimensions in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/arrays/array-dimensions.md)  
  
