--- a/docs/visual-basic/misc/bc30807.md
+++ b/docs/visual-basic/misc/bc30807.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33617290"
 ---
 # <a name="39let39-and-39set39-assignment-statements-are-no-longer-supported"></a><span data-ttu-id="caece-102">&#39;Let&#39;と&#39;設定&#39;代入ステートメントはサポートされていません</span><span class="sxs-lookup"><span data-stu-id="caece-102">&#39;Let&#39; and &#39;Set&#39; assignment statements are no longer supported</span></span>
 <span data-ttu-id="caece-103">`Let` および `Set` は代入で使用できません。</span><span class="sxs-lookup"><span data-stu-id="caece-103">`Let` and `Set` cannot be used in assignments.</span></span>  
