--- a/docs/visual-basic/misc/bc30815.md
+++ b/docs/visual-basic/misc/bc30815.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33615987"
 ---
 # <a name="39ltfunctionnamegt39-is-not-declared-visual-basic-error"></a><span data-ttu-id="f7161-102">&#39;&lt;関数は functionname&gt; &#39; (Visual Basic エラー) が宣言されていません</span><span class="sxs-lookup"><span data-stu-id="f7161-102">&#39;&lt;functionname&gt;&#39; is not declared (Visual Basic Error)</span></span>
 <span data-ttu-id="f7161-103">'\<functionname >' は宣言されていません。</span><span class="sxs-lookup"><span data-stu-id="f7161-103">'\<functionname>' is not declared.</span></span> <span data-ttu-id="f7161-104">ファイル出入力 (I/O) 機能は Microsoft.VisualBasic 名前空間で使用できます。</span><span class="sxs-lookup"><span data-stu-id="f7161-104">File I/O functionality is available in the Microsoft.VisualBasic namespace.</span></span>  
