--- a/docs/visual-basic/misc/bc30906.md
+++ b/docs/visual-basic/misc/bc30906.md
@@ -1,38 +1,32 @@
 ---
-title: '&lt;procedurename1&gt;オーバーライドできません&lt;procedurename2&gt;が異なるため、宣言されたパラメーター &#39;ParamArray &#39;'
+title: '&lt;procedurename1&gt;オーバーライドできません&lt;procedurename2&gt;として宣言されたパラメーターが異なるため&#39;ParamArray&#39;'
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-visual-basic
-ms.topic: article
 f1_keywords:
 - bc30906
 - vbc30906
 helpviewer_keywords:
 - BC30906
 ms.assetid: 12939030-732e-4c6d-8fe9-707b7532174b
-caps.latest.revision: 11
-author: dotnet-bot
-ms.author: dotnetcontent
-ms.openlocfilehash: 01434480d1015574eaab7e3ccde277b5f36309d0
-ms.sourcegitcommit: 4f3fef493080a43e70e951223894768d36ce430a
+ms.openlocfilehash: eaa972a052f916db4d798cc1564ae80e1a550a45
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 11/21/2017
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33617869"
 ---
-# <a name="ltprocedurename1gt-cannot-override-ltprocedurename2gt-because-they-differ-by-parameters-declared-39paramarray39"></a><span data-ttu-id="8e24d-102">&lt;procedurename1&gt;オーバーライドできません&lt;procedurename2&gt;が異なるため、宣言されたパラメーター &#39;ParamArray &#39;</span><span class="sxs-lookup"><span data-stu-id="8e24d-102">&lt;procedurename1&gt; cannot override &lt;procedurename2&gt; because they differ by parameters declared &#39;ParamArray&#39;</span></span>
-<span data-ttu-id="8e24d-103">派生クラス内のプロシージャは、基底クラスで同じ名前を持つプロシージャをオーバーライドしますが、パラメーター リストが異なります。</span><span class="sxs-lookup"><span data-stu-id="8e24d-103">A procedure in a derived class overrides an identically named procedure in the base class, but the parameter lists are different.</span></span>  
+# <a name="ltprocedurename1gt-cannot-override-ltprocedurename2gt-because-they-differ-by-parameters-declared-39paramarray39"></a><span data-ttu-id="3372a-102">&lt;procedurename1&gt;オーバーライドできません&lt;procedurename2&gt;として宣言されたパラメーターが異なるため&#39;ParamArray&#39;</span><span class="sxs-lookup"><span data-stu-id="3372a-102">&lt;procedurename1&gt; cannot override &lt;procedurename2&gt; because they differ by parameters declared &#39;ParamArray&#39;</span></span>
+<span data-ttu-id="3372a-103">派生クラス内のプロシージャは、基底クラスで同じ名前を持つプロシージャをオーバーライドしますが、パラメーター リストが異なります。</span><span class="sxs-lookup"><span data-stu-id="3372a-103">A procedure in a derived class overrides an identically named procedure in the base class, but the parameter lists are different.</span></span>  
   
- <span data-ttu-id="8e24d-104">継承クラスでプロシージャをオーバーライドするには、オーバーライド元のプロシージャがパラメーター リスト、アクセス レベル、および戻り値の型 (存在する場合) と一致する必要があります。</span><span class="sxs-lookup"><span data-stu-id="8e24d-104">To override a procedure in an inherited class, the overriding procedure must match its parameter list, access level, and return type (if any).</span></span> <span data-ttu-id="8e24d-105">具体的には、いずれかに一致する必要があります[オプション](../../visual-basic/language-reference/modifiers/optional.md)または[ParamArray](../../visual-basic/language-reference/modifiers/paramarray.md)宣言します。</span><span class="sxs-lookup"><span data-stu-id="8e24d-105">In particular, it must match any [Optional](../../visual-basic/language-reference/modifiers/optional.md) or [ParamArray](../../visual-basic/language-reference/modifiers/paramarray.md) declaration.</span></span>  
+ <span data-ttu-id="3372a-104">継承クラスでプロシージャをオーバーライドするには、オーバーライド元のプロシージャがパラメーター リスト、アクセス レベル、および戻り値の型 (存在する場合) と一致する必要があります。</span><span class="sxs-lookup"><span data-stu-id="3372a-104">To override a procedure in an inherited class, the overriding procedure must match its parameter list, access level, and return type (if any).</span></span> <span data-ttu-id="3372a-105">具体的には、いずれかに一致する必要があります[オプション](../../visual-basic/language-reference/modifiers/optional.md)または[ParamArray](../../visual-basic/language-reference/modifiers/paramarray.md)宣言します。</span><span class="sxs-lookup"><span data-stu-id="3372a-105">In particular, it must match any [Optional](../../visual-basic/language-reference/modifiers/optional.md) or [ParamArray](../../visual-basic/language-reference/modifiers/paramarray.md) declaration.</span></span>  
   
- <span data-ttu-id="8e24d-106">**エラー ID:** BC30906</span><span class="sxs-lookup"><span data-stu-id="8e24d-106">**Error ID:** BC30906</span></span>  
+ <span data-ttu-id="3372a-106">**エラー ID:** BC30906</span><span class="sxs-lookup"><span data-stu-id="3372a-106">**Error ID:** BC30906</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="8e24d-107">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="8e24d-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="3372a-107">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="3372a-107">To correct this error</span></span>  
   
--   <span data-ttu-id="8e24d-108">プロシージャをオーバーライドする場合は、パラメーター リストを基底クラスのプロシージャのパラメーター リストとまったく同じものにします。</span><span class="sxs-lookup"><span data-stu-id="8e24d-108">If you want to override the procedure, make the parameter list exactly the same as the parameter list in the base class procedure.</span></span> <span data-ttu-id="8e24d-109">最後のパラメーターを基底クラスのプロシージャで `ParamArray` を指定して宣言している場合は、そのパラメーターをオーバーライド元のプロシージャで `ParamArray` を指定して宣言します。</span><span class="sxs-lookup"><span data-stu-id="8e24d-109">If the last parameter is declared with `ParamArray` in the base class procedure, declare it with `ParamArray` in the overriding procedure.</span></span>  
+-   <span data-ttu-id="3372a-108">プロシージャをオーバーライドする場合は、パラメーター リストを基底クラスのプロシージャのパラメーター リストとまったく同じものにします。</span><span class="sxs-lookup"><span data-stu-id="3372a-108">If you want to override the procedure, make the parameter list exactly the same as the parameter list in the base class procedure.</span></span> <span data-ttu-id="3372a-109">最後のパラメーターを基底クラスのプロシージャで `ParamArray` を指定して宣言している場合は、そのパラメーターをオーバーライド元のプロシージャで `ParamArray` を指定して宣言します。</span><span class="sxs-lookup"><span data-stu-id="3372a-109">If the last parameter is declared with `ParamArray` in the base class procedure, declare it with `ParamArray` in the overriding procedure.</span></span>  
   
--   <span data-ttu-id="8e24d-110">基底クラスのバージョンとは異なるパラメーター リストが必要である場合は、オーバーライドできません。</span><span class="sxs-lookup"><span data-stu-id="8e24d-110">If you want a different parameter list from the base class version, you cannot override it.</span></span> <span data-ttu-id="8e24d-111">代わりにオーバーロードすることを検討してください。</span><span class="sxs-lookup"><span data-stu-id="8e24d-111">Consider overloading it instead.</span></span> <span data-ttu-id="8e24d-112">詳細については、「 [Procedure Overloading](../../visual-basic/programming-guide/language-features/procedures/procedure-overloading.md)」を参照してください。</span><span class="sxs-lookup"><span data-stu-id="8e24d-112">For more information, see [Procedure Overloading](../../visual-basic/programming-guide/language-features/procedures/procedure-overloading.md).</span></span>  
+-   <span data-ttu-id="3372a-110">基底クラスのバージョンとは異なるパラメーター リストが必要である場合は、オーバーライドできません。</span><span class="sxs-lookup"><span data-stu-id="3372a-110">If you want a different parameter list from the base class version, you cannot override it.</span></span> <span data-ttu-id="3372a-111">代わりにオーバーロードすることを検討してください。</span><span class="sxs-lookup"><span data-stu-id="3372a-111">Consider overloading it instead.</span></span> <span data-ttu-id="3372a-112">詳細については、「 [Procedure Overloading](../../visual-basic/programming-guide/language-features/procedures/procedure-overloading.md)」を参照してください。</span><span class="sxs-lookup"><span data-stu-id="3372a-112">For more information, see [Procedure Overloading](../../visual-basic/programming-guide/language-features/procedures/procedure-overloading.md).</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="8e24d-113">関連項目</span><span class="sxs-lookup"><span data-stu-id="8e24d-113">See Also</span></span>  
- [<span data-ttu-id="8e24d-114">Overrides</span><span class="sxs-lookup"><span data-stu-id="8e24d-114">Overrides</span></span>](../../visual-basic/language-reference/modifiers/overrides.md)  
- [<span data-ttu-id="8e24d-115">派生クラスのプロパティとメソッドをオーバーライドします。</span><span class="sxs-lookup"><span data-stu-id="8e24d-115">Overriding properties and methods in derived classes</span></span>](~/docs/visual-basic/programming-guide/language-features/objects-and-classes/inheritance-basics.md#overriding-properties-and-methods-in-derived-classes)
+## <a name="see-also"></a><span data-ttu-id="3372a-113">関連項目</span><span class="sxs-lookup"><span data-stu-id="3372a-113">See Also</span></span>  
+ [<span data-ttu-id="3372a-114">Overrides</span><span class="sxs-lookup"><span data-stu-id="3372a-114">Overrides</span></span>](../../visual-basic/language-reference/modifiers/overrides.md)  
+ [<span data-ttu-id="3372a-115">派生クラスのプロパティとメソッドをオーバーライドします。</span><span class="sxs-lookup"><span data-stu-id="3372a-115">Overriding properties and methods in derived classes</span></span>](~/docs/visual-basic/programming-guide/language-features/objects-and-classes/inheritance-basics.md#overriding-properties-and-methods-in-derived-classes)
