--- a/docs/visual-basic/misc/bc30924.md
+++ b/docs/visual-basic/misc/bc30924.md
@@ -1,30 +1,24 @@
 ---
-title: "&#39;です。&lt;名前&gt;&#39; の種類 &#39; に公開できません&lt;。type1&gt;&#39; 基になるデリゲート型 &#39; で使用される&lt;delegatetype&gt;&#39; 経由でプロジェクトの外側に実装するイベントの&lt;指定子&gt;&#39;&lt;type2&gt;&#39;です。"
+title: '&#39;&lt;名前&gt;&#39;型を公開できません&#39; &lt;type1&gt; &#39;基になるデリゲート型で使用される&#39; &lt;delegatetype&gt; &#39;実装しているイベントの。経由でプロジェクトの外部&lt;指定子&gt; &#39; &lt;type2&gt;&#39;'
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-visual-basic
-ms.topic: article
 f1_keywords:
 - vbc30924
 - BC30924
 helpviewer_keywords:
 - BC30924
 ms.assetid: 0021ed02-fd0b-4d29-9f08-73f7276af076
-caps.latest.revision: 
-author: dotnet-bot
-ms.author: dotnetcontent
-ms.openlocfilehash: edcb0cc8f2bc5c708ba2cf4ec16c8966502887d3
-ms.sourcegitcommit: 34ec7753acf76f90a0fa845235ef06663dc9e36e
+ms.openlocfilehash: dc9b572bfc83ae854e9a706c00030d47652add9f
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 12/21/2017
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33616618"
 ---
-# <a name="39ltnamegt39-cannot-expose-type-39lttype1gt39-used-in-the-underlying-delegate-type-39ltdelegatetypegt39-of-the-event-it-is-implementing-outside-the-project-through-ltspecifiergt-39lttype2gt39"></a><span data-ttu-id="b6219-102">&#39;です。&lt;名前&gt;&#39; の種類 &#39; に公開できません&lt;。type1&gt;&#39; 基になるデリゲート型 &#39; で使用される&lt;delegatetype&gt;&#39; 経由でプロジェクトの外側に実装するイベントの&lt;指定子&gt;&#39;&lt;type2&gt;&#39;です。</span><span class="sxs-lookup"><span data-stu-id="b6219-102">&#39;&lt;name&gt;&#39; cannot expose type &#39;&lt;type1&gt;&#39; used in the underlying delegate type &#39;&lt;delegatetype&gt;&#39; of the event it is implementing outside the project through &lt;specifier&gt; &#39;&lt;type2&gt;&#39;</span></span>
-<span data-ttu-id="b6219-103">このコードは、パブリック クラスの外部でプライベート型を公開しています。</span><span class="sxs-lookup"><span data-stu-id="b6219-103">The code exposes a private type outside the public class.</span></span>  
+# <a name="39ltnamegt39-cannot-expose-type-39lttype1gt39-used-in-the-underlying-delegate-type-39ltdelegatetypegt39-of-the-event-it-is-implementing-outside-the-project-through-ltspecifiergt-39lttype2gt39"></a><span data-ttu-id="cd270-102">&#39;&lt;名前&gt;&#39;型を公開できません&#39; &lt;type1&gt; &#39;基になるデリゲート型で使用される&#39; &lt;delegatetype&gt; &#39;実装しているイベントの。経由でプロジェクトの外部&lt;指定子&gt; &#39; &lt;type2&gt;&#39;</span><span class="sxs-lookup"><span data-stu-id="cd270-102">&#39;&lt;name&gt;&#39; cannot expose type &#39;&lt;type1&gt;&#39; used in the underlying delegate type &#39;&lt;delegatetype&gt;&#39; of the event it is implementing outside the project through &lt;specifier&gt; &#39;&lt;type2&gt;&#39;</span></span>
+<span data-ttu-id="cd270-103">このコードは、パブリック クラスの外部でプライベート型を公開しています。</span><span class="sxs-lookup"><span data-stu-id="cd270-103">The code exposes a private type outside the public class.</span></span>  
   
- <span data-ttu-id="b6219-104">**エラー ID:** BC30924</span><span class="sxs-lookup"><span data-stu-id="b6219-104">**Error ID:** BC30924</span></span>  
+ <span data-ttu-id="cd270-104">**エラー ID:** BC30924</span><span class="sxs-lookup"><span data-stu-id="cd270-104">**Error ID:** BC30924</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="b6219-105">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="b6219-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="cd270-105">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="cd270-105">To correct this error</span></span>  
   
--   <span data-ttu-id="b6219-106">型 `Public` を宣言するか、または別の型を使用します。</span><span class="sxs-lookup"><span data-stu-id="b6219-106">Declare the type `Public` or use another type.</span></span>
+-   <span data-ttu-id="cd270-106">型 `Public` を宣言するか、または別の型を使用します。</span><span class="sxs-lookup"><span data-stu-id="cd270-106">Declare the type `Public` or use another type.</span></span>
