--- a/docs/visual-basic/misc/bc30958.md
+++ b/docs/visual-basic/misc/bc30958.md
@@ -1,38 +1,32 @@
 ---
-title: "エディット コンティニュによって作成されたオブジェクトの評価はまだ利用可能ではありません"
+title: エディット コンティニュによって作成されたオブジェクトの評価はまだ利用可能ではありません
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-visual-basic
-ms.topic: article
 f1_keywords:
 - vbc30958
 - bc30958
 helpviewer_keywords:
 - BC30958
 ms.assetid: 9b01c510-2d2c-4890-a98c-36c0c8423949
-caps.latest.revision: 
-author: dotnet-bot
-ms.author: dotnetcontent
-ms.openlocfilehash: 3f2182fbd5d92c07639a2eb7f244ebe76d876c61
-ms.sourcegitcommit: c0dd436f6f8f44dc80dc43b07f6841a00b74b23f
+ms.openlocfilehash: 13e40f12403d7a223b135b786ad703431179a48f
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 01/19/2018
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33615896"
 ---
-# <a name="object-created-by-edit-and-continue-is-not-yet-available-for-evaluation"></a><span data-ttu-id="6587e-102">エディット コンティニュによって作成されたオブジェクトの評価はまだ利用可能ではありません</span><span class="sxs-lookup"><span data-stu-id="6587e-102">Object created by Edit and Continue is not yet available for evaluation</span></span>
-<span data-ttu-id="6587e-103">Visual Studio デバッガーでは新しいオブジェクトが作成されていますが、まだアクセスできません。</span><span class="sxs-lookup"><span data-stu-id="6587e-103">In the Visual Studio debugger, a new object is being created, but it cannot be accessed yet.</span></span>  
+# <a name="object-created-by-edit-and-continue-is-not-yet-available-for-evaluation"></a><span data-ttu-id="382f1-102">エディット コンティニュによって作成されたオブジェクトの評価はまだ利用可能ではありません</span><span class="sxs-lookup"><span data-stu-id="382f1-102">Object created by Edit and Continue is not yet available for evaluation</span></span>
+<span data-ttu-id="382f1-103">Visual Studio デバッガーでは新しいオブジェクトが作成されていますが、まだアクセスできません。</span><span class="sxs-lookup"><span data-stu-id="382f1-103">In the Visual Studio debugger, a new object is being created, but it cannot be accessed yet.</span></span>  
   
- <span data-ttu-id="6587e-104">オブジェクトが使用できない理由には、メモリ割り当てエラーやオブジェクトが同期されていない状態にあることなどがあります。</span><span class="sxs-lookup"><span data-stu-id="6587e-104">Possible causes for an object to be unavailable include memory allocation failure and object state out of synchronization.</span></span> <span data-ttu-id="6587e-105">これらは一時的な内部的な状態であり、通常、デバッガーへの入力の結果ではありません。</span><span class="sxs-lookup"><span data-stu-id="6587e-105">These are temporary internal conditions and usually not a result of input to the debugger.</span></span>  
+ <span data-ttu-id="382f1-104">オブジェクトが使用できない理由には、メモリ割り当てエラーやオブジェクトが同期されていない状態にあることなどがあります。</span><span class="sxs-lookup"><span data-stu-id="382f1-104">Possible causes for an object to be unavailable include memory allocation failure and object state out of synchronization.</span></span> <span data-ttu-id="382f1-105">これらは一時的な内部的な状態であり、通常、デバッガーへの入力の結果ではありません。</span><span class="sxs-lookup"><span data-stu-id="382f1-105">These are temporary internal conditions and usually not a result of input to the debugger.</span></span>  
   
- <span data-ttu-id="6587e-106">**エラー ID:** BC30958</span><span class="sxs-lookup"><span data-stu-id="6587e-106">**Error ID:** BC30958</span></span>  
+ <span data-ttu-id="382f1-106">**エラー ID:** BC30958</span><span class="sxs-lookup"><span data-stu-id="382f1-106">**Error ID:** BC30958</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="6587e-107">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="6587e-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="382f1-107">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="382f1-107">To correct this error</span></span>  
   
--   <span data-ttu-id="6587e-108">デバッグを終了し、再起動します。</span><span class="sxs-lookup"><span data-stu-id="6587e-108">Terminate and restart debugging.</span></span>  
+-   <span data-ttu-id="382f1-108">デバッグを終了し、再起動します。</span><span class="sxs-lookup"><span data-stu-id="382f1-108">Terminate and restart debugging.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="6587e-109">参照</span><span class="sxs-lookup"><span data-stu-id="6587e-109">See Also</span></span>  
- [<span data-ttu-id="6587e-110">Visual Studio でのデバッグ</span><span class="sxs-lookup"><span data-stu-id="6587e-110">Debugging in Visual Studio</span></span>](/visualstudio/debugger/debugging-in-visual-studio)  
- [<span data-ttu-id="6587e-111">方法: 実行の開始</span><span class="sxs-lookup"><span data-stu-id="6587e-111">How to: Start Execution</span></span>](http://msdn.microsoft.com/library/b0fe0ce5-900e-421f-a4c6-aa44ddae453c)  
- [<span data-ttu-id="6587e-112">方法: デバッグの停止や実行の停止</span><span class="sxs-lookup"><span data-stu-id="6587e-112">How to: Stop Debugging or Stop Execution</span></span>](http://msdn.microsoft.com/library/03c68f95-aa96-481b-990e-467e065453a5)  
- [<span data-ttu-id="6587e-113">コードのステップ実行の概要</span><span class="sxs-lookup"><span data-stu-id="6587e-113">Code Stepping Overview</span></span>](http://msdn.microsoft.com/library/8791dac9-64d1-4bb9-b59e-8d59af1833f9)
+## <a name="see-also"></a><span data-ttu-id="382f1-109">関連項目</span><span class="sxs-lookup"><span data-stu-id="382f1-109">See Also</span></span>  
+ [<span data-ttu-id="382f1-110">Visual Studio でのデバッグ</span><span class="sxs-lookup"><span data-stu-id="382f1-110">Debugging in Visual Studio</span></span>](/visualstudio/debugger/debugging-in-visual-studio)  
+ [<span data-ttu-id="382f1-111">方法: 実行の開始</span><span class="sxs-lookup"><span data-stu-id="382f1-111">How to: Start Execution</span></span>](http://msdn.microsoft.com/library/b0fe0ce5-900e-421f-a4c6-aa44ddae453c)  
+ [<span data-ttu-id="382f1-112">方法: デバッグの停止や実行の停止</span><span class="sxs-lookup"><span data-stu-id="382f1-112">How to: Stop Debugging or Stop Execution</span></span>](http://msdn.microsoft.com/library/03c68f95-aa96-481b-990e-467e065453a5)  
+ [<span data-ttu-id="382f1-113">コードのステップ実行の概要</span><span class="sxs-lookup"><span data-stu-id="382f1-113">Code Stepping Overview</span></span>](http://msdn.microsoft.com/library/8791dac9-64d1-4bb9-b59e-8d59af1833f9)
