--- a/docs/visual-basic/misc/bc30975.md
+++ b/docs/visual-basic/misc/bc30975.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33618938"
 ---
 # <a name="39for39-loop-control-variable-already-in-use-by-an-enclosing-39for39-loop"></a><span data-ttu-id="df63d-102">&#39;&#39;ループ コントロール変数が、それを囲むによって既に使用されて&#39;の&#39;ループ</span><span class="sxs-lookup"><span data-stu-id="df63d-102">&#39;For&#39; loop control variable already in use by an enclosing &#39;For&#39; loop</span></span>
 <span data-ttu-id="df63d-103">入れ子になったすべての `For` ループが一意のコントロール変数を使用する必要があります。</span><span class="sxs-lookup"><span data-stu-id="df63d-103">Nested `For` loops must all use unique control variables.</span></span>  
