--- a/docs/visual-basic/misc/bc31024.md
+++ b/docs/visual-basic/misc/bc31024.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33619344"
 ---
 # <a name="unable-to-create-a-net-runtime-interface-lterrorgt"></a><span data-ttu-id="9beff-102">.NET ランタイム インターフェイスを作成することができません:&lt;エラー&gt;</span><span class="sxs-lookup"><span data-stu-id="9beff-102">Unable to create a .NET Runtime interface: &lt;error&gt;</span></span>
 <span data-ttu-id="9beff-103">インターフェイスの作成中、またはインターフェイスのメソッド呼び出しが失敗したときに、内部コンパイラ エラーが発生しました。</span><span class="sxs-lookup"><span data-stu-id="9beff-103">There was an internal compiler error creating an interface, or a method call on an interface failed.</span></span>  
