--- a/docs/visual-basic/misc/bc31033.md
+++ b/docs/visual-basic/misc/bc31033.md
@@ -1,34 +1,28 @@
 ---
-title: インターフェイス &#39;&lt;interfacename&gt;&#39; この型によって 1 回のみ実装できます
+title: インターフェイス&#39; &lt;interfacename&gt; &#39;この型によって 1 回のみ実装できます
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-visual-basic
-ms.topic: article
 f1_keywords:
 - bc31033
 - vbc31033
 helpviewer_keywords:
 - BC31033
 ms.assetid: 473cc0bc-a9f0-4ae5-b421-5c08ea6bbc5e
-caps.latest.revision: 10
-author: dotnet-bot
-ms.author: dotnetcontent
-ms.openlocfilehash: 682e5a33a0691326565bd41875a08946c62a5c08
-ms.sourcegitcommit: 4f3fef493080a43e70e951223894768d36ce430a
+ms.openlocfilehash: e19f80240c4f124f45f2e53e2ea5db00da2a242e
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 11/21/2017
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33619383"
 ---
-# <a name="interface-39ltinterfacenamegt39-can-be-implemented-only-once-by-this-type"></a><span data-ttu-id="01988-102">インターフェイス &#39;&lt;interfacename&gt;&#39; この型によって 1 回のみ実装できます</span><span class="sxs-lookup"><span data-stu-id="01988-102">Interface &#39;&lt;interfacename&gt;&#39; can be implemented only once by this type</span></span>
-<span data-ttu-id="01988-103">指定したインターフェイスはこの型によって既に実装されており、再実装できません。</span><span class="sxs-lookup"><span data-stu-id="01988-103">The specified interface is already implemented by this type, and cannot be implemented again.</span></span>  
+# <a name="interface-39ltinterfacenamegt39-can-be-implemented-only-once-by-this-type"></a><span data-ttu-id="81e1a-102">インターフェイス&#39; &lt;interfacename&gt; &#39;この型によって 1 回のみ実装できます</span><span class="sxs-lookup"><span data-stu-id="81e1a-102">Interface &#39;&lt;interfacename&gt;&#39; can be implemented only once by this type</span></span>
+<span data-ttu-id="81e1a-103">指定したインターフェイスはこの型によって既に実装されており、再実装できません。</span><span class="sxs-lookup"><span data-stu-id="81e1a-103">The specified interface is already implemented by this type, and cannot be implemented again.</span></span>  
   
- <span data-ttu-id="01988-104">**エラー ID:** BC31033</span><span class="sxs-lookup"><span data-stu-id="01988-104">**Error ID:** BC31033</span></span>  
+ <span data-ttu-id="81e1a-104">**エラー ID:** BC31033</span><span class="sxs-lookup"><span data-stu-id="81e1a-104">**Error ID:** BC31033</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="01988-105">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="01988-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="81e1a-105">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="81e1a-105">To correct this error</span></span>  
   
--   <span data-ttu-id="01988-106">この型を 1 回だけ使用してこのインターフェイスを実装します。</span><span class="sxs-lookup"><span data-stu-id="01988-106">Implement this interface using this type only once.</span></span>  
+-   <span data-ttu-id="81e1a-106">この型を 1 回だけ使用してこのインターフェイスを実装します。</span><span class="sxs-lookup"><span data-stu-id="81e1a-106">Implement this interface using this type only once.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="01988-107">関連項目</span><span class="sxs-lookup"><span data-stu-id="01988-107">See Also</span></span>  
- [<span data-ttu-id="01988-108">インターフェイス</span><span class="sxs-lookup"><span data-stu-id="01988-108">Interfaces</span></span>](../../visual-basic/programming-guide/language-features/interfaces/index.md)  
- [<span data-ttu-id="01988-109">Implements</span><span class="sxs-lookup"><span data-stu-id="01988-109">Implements</span></span>](../../visual-basic/language-reference/statements/implements-clause.md)
+## <a name="see-also"></a><span data-ttu-id="81e1a-107">関連項目</span><span class="sxs-lookup"><span data-stu-id="81e1a-107">See Also</span></span>  
+ [<span data-ttu-id="81e1a-108">インターフェイス</span><span class="sxs-lookup"><span data-stu-id="81e1a-108">Interfaces</span></span>](../../visual-basic/programming-guide/language-features/interfaces/index.md)  
+ [<span data-ttu-id="81e1a-109">Implements</span><span class="sxs-lookup"><span data-stu-id="81e1a-109">Implements</span></span>](../../visual-basic/language-reference/statements/implements-clause.md)
