--- a/docs/visual-basic/misc/bc31042.md
+++ b/docs/visual-basic/misc/bc31042.md
@@ -1,34 +1,28 @@
 ---
-title: '&#39;です。新しいサブ &#39;インターフェイス メンバーを実装することはできません。'
+title: '&#39;Sub New&#39;インターフェイス メンバーを実装することはできません'
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-visual-basic
-ms.topic: article
 f1_keywords:
 - bc31042
 - vbc31042
 helpviewer_keywords:
 - BC31042
 ms.assetid: 43ad231f-878d-4d08-b43c-06bf167ddd7d
-caps.latest.revision: 8
-author: dotnet-bot
-ms.author: dotnetcontent
-ms.openlocfilehash: f55c6bdde010d1a6f4c9aae600c7a6fbc0b7c52a
-ms.sourcegitcommit: 4f3fef493080a43e70e951223894768d36ce430a
+ms.openlocfilehash: bd87235189f4a21ff689e6d07a58bdddc62b351b
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 11/21/2017
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33619143"
 ---
-# <a name="39sub-new39-cannot-implement-interface-members"></a><span data-ttu-id="3ee8b-102">&#39;です。新しいサブ &#39;インターフェイス メンバーを実装することはできません。</span><span class="sxs-lookup"><span data-stu-id="3ee8b-102">&#39;Sub New&#39; cannot implement interface members</span></span>
-<span data-ttu-id="3ee8b-103">`Sub New` はコンストラクターであり、メンバーを実装することはできません。</span><span class="sxs-lookup"><span data-stu-id="3ee8b-103">`Sub New` is a constructor and it cannot implement members.</span></span>  
+# <a name="39sub-new39-cannot-implement-interface-members"></a><span data-ttu-id="df44e-102">&#39;Sub New&#39;インターフェイス メンバーを実装することはできません</span><span class="sxs-lookup"><span data-stu-id="df44e-102">&#39;Sub New&#39; cannot implement interface members</span></span>
+<span data-ttu-id="df44e-103">`Sub New` はコンストラクターであり、メンバーを実装することはできません。</span><span class="sxs-lookup"><span data-stu-id="df44e-103">`Sub New` is a constructor and it cannot implement members.</span></span>  
   
- <span data-ttu-id="3ee8b-104">**エラー ID:** BC31042</span><span class="sxs-lookup"><span data-stu-id="3ee8b-104">**Error ID:** BC31042</span></span>  
+ <span data-ttu-id="df44e-104">**エラー ID:** BC31042</span><span class="sxs-lookup"><span data-stu-id="df44e-104">**Error ID:** BC31042</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="3ee8b-105">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="3ee8b-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="df44e-105">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="df44e-105">To correct this error</span></span>  
   
--   <span data-ttu-id="3ee8b-106">`Implements` プロシージャから `Sub New` ステートメントを削除します。</span><span class="sxs-lookup"><span data-stu-id="3ee8b-106">Remove `Implements` statements from `Sub New` procedures.</span></span>  
+-   <span data-ttu-id="df44e-106">`Implements` プロシージャから `Sub New` ステートメントを削除します。</span><span class="sxs-lookup"><span data-stu-id="df44e-106">Remove `Implements` statements from `Sub New` procedures.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="3ee8b-107">関連項目</span><span class="sxs-lookup"><span data-stu-id="3ee8b-107">See Also</span></span>  
- [<span data-ttu-id="3ee8b-108">インターフェイス</span><span class="sxs-lookup"><span data-stu-id="3ee8b-108">Interfaces</span></span>](../../visual-basic/programming-guide/language-features/interfaces/index.md)  
- [<span data-ttu-id="3ee8b-109">Implements</span><span class="sxs-lookup"><span data-stu-id="3ee8b-109">Implements</span></span>](../../visual-basic/language-reference/statements/implements-clause.md)
+## <a name="see-also"></a><span data-ttu-id="df44e-107">関連項目</span><span class="sxs-lookup"><span data-stu-id="df44e-107">See Also</span></span>  
+ [<span data-ttu-id="df44e-108">インターフェイス</span><span class="sxs-lookup"><span data-stu-id="df44e-108">Interfaces</span></span>](../../visual-basic/programming-guide/language-features/interfaces/index.md)  
+ [<span data-ttu-id="df44e-109">Implements</span><span class="sxs-lookup"><span data-stu-id="df44e-109">Implements</span></span>](../../visual-basic/language-reference/statements/implements-clause.md)
