--- a/docs/visual-basic/misc/bc31044.md
+++ b/docs/visual-basic/misc/bc31044.md
@@ -1,38 +1,32 @@
 ---
-title: 'イベントで宣言する (& a) #39 です。として &#39;です。句はデリゲート型である必要があります。'
+title: 宣言されたイベント、&#39;として&#39;句はデリゲート型である必要があります
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-visual-basic
-ms.topic: article
 f1_keywords:
 - vbc31044
 - bc31044
 helpviewer_keywords:
 - BC31044
 ms.assetid: d0e86fcc-c638-4945-aa6f-9826aa38b23d
-caps.latest.revision: 9
-author: dotnet-bot
-ms.author: dotnetcontent
-ms.openlocfilehash: 8073a50c89cdbf01c8393d00d26f9034672bab8c
-ms.sourcegitcommit: 4f3fef493080a43e70e951223894768d36ce430a
+ms.openlocfilehash: 2e5fed7473de567de49bda1241d9ef0109f2a5c3
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 11/21/2017
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33619022"
 ---
-# <a name="events-declared-with-an-39as39-clause-must-have-a-delegate-type"></a><span data-ttu-id="f4f2b-102">イベントで宣言する (& a) #39 です。として &#39;です。句はデリゲート型である必要があります。</span><span class="sxs-lookup"><span data-stu-id="f4f2b-102">Events declared with an &#39;As&#39; clause must have a delegate type</span></span>
-<span data-ttu-id="f4f2b-103">デリゲートではない型が指定されています。</span><span class="sxs-lookup"><span data-stu-id="f4f2b-103">A type was specified that is not a delegate.</span></span>  
+# <a name="events-declared-with-an-39as39-clause-must-have-a-delegate-type"></a><span data-ttu-id="343a1-102">宣言されたイベント、&#39;として&#39;句はデリゲート型である必要があります</span><span class="sxs-lookup"><span data-stu-id="343a1-102">Events declared with an &#39;As&#39; clause must have a delegate type</span></span>
+<span data-ttu-id="343a1-103">デリゲートではない型が指定されています。</span><span class="sxs-lookup"><span data-stu-id="343a1-103">A type was specified that is not a delegate.</span></span>  
   
- <span data-ttu-id="f4f2b-104">**エラー ID:** BC31044</span><span class="sxs-lookup"><span data-stu-id="f4f2b-104">**Error ID:** BC31044</span></span>  
+ <span data-ttu-id="343a1-104">**エラー ID:** BC31044</span><span class="sxs-lookup"><span data-stu-id="343a1-104">**Error ID:** BC31044</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="f4f2b-105">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="f4f2b-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="343a1-105">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="343a1-105">To correct this error</span></span>  
   
-1.  <span data-ttu-id="f4f2b-106">`As` 句を削除します。</span><span class="sxs-lookup"><span data-stu-id="f4f2b-106">Remove the `As` clause.</span></span>  
+1.  <span data-ttu-id="343a1-106">`As` 句を削除します。</span><span class="sxs-lookup"><span data-stu-id="343a1-106">Remove the `As` clause.</span></span>  
   
-2.  <span data-ttu-id="f4f2b-107">`As` 句を持つデリゲートを指定します。</span><span class="sxs-lookup"><span data-stu-id="f4f2b-107">Specify a delegate with the `As` clause.</span></span>  
+2.  <span data-ttu-id="343a1-107">`As` 句を持つデリゲートを指定します。</span><span class="sxs-lookup"><span data-stu-id="343a1-107">Specify a delegate with the `As` clause.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="f4f2b-108">関連項目</span><span class="sxs-lookup"><span data-stu-id="f4f2b-108">See Also</span></span>  
- [<span data-ttu-id="f4f2b-109">イベント</span><span class="sxs-lookup"><span data-stu-id="f4f2b-109">Events</span></span>](../../visual-basic/programming-guide/language-features/events/index.md)  
- [<span data-ttu-id="f4f2b-110">デリゲート</span><span class="sxs-lookup"><span data-stu-id="f4f2b-110">Delegates</span></span>](../../visual-basic/programming-guide/language-features/delegates/index.md)  
- [<span data-ttu-id="f4f2b-111">Event ステートメント</span><span class="sxs-lookup"><span data-stu-id="f4f2b-111">Event Statement</span></span>](../../visual-basic/language-reference/statements/event-statement.md)  
- [<span data-ttu-id="f4f2b-112">Delegate ステートメント</span><span class="sxs-lookup"><span data-stu-id="f4f2b-112">Delegate Statement</span></span>](../../visual-basic/language-reference/statements/delegate-statement.md)
+## <a name="see-also"></a><span data-ttu-id="343a1-108">関連項目</span><span class="sxs-lookup"><span data-stu-id="343a1-108">See Also</span></span>  
+ [<span data-ttu-id="343a1-109">イベント</span><span class="sxs-lookup"><span data-stu-id="343a1-109">Events</span></span>](../../visual-basic/programming-guide/language-features/events/index.md)  
+ [<span data-ttu-id="343a1-110">デリゲート</span><span class="sxs-lookup"><span data-stu-id="343a1-110">Delegates</span></span>](../../visual-basic/programming-guide/language-features/delegates/index.md)  
+ [<span data-ttu-id="343a1-111">Event ステートメント</span><span class="sxs-lookup"><span data-stu-id="343a1-111">Event Statement</span></span>](../../visual-basic/language-reference/statements/event-statement.md)  
+ [<span data-ttu-id="343a1-112">Delegate ステートメント</span><span class="sxs-lookup"><span data-stu-id="343a1-112">Delegate Statement</span></span>](../../visual-basic/language-reference/statements/delegate-statement.md)
