--- a/docs/visual-basic/misc/bc36012.md
+++ b/docs/visual-basic/misc/bc36012.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33629978"
 ---
 # <a name="39using39-resource-variable-type-can-not-be-array-type"></a><span data-ttu-id="5d625-102">&#39;使用して&#39;リソース変数の型を配列型にすることはできません</span><span class="sxs-lookup"><span data-stu-id="5d625-102">&#39;Using&#39; resource variable type can not be array type</span></span>
 <span data-ttu-id="5d625-103">`Using` ステートメントは、リソースの配列変数を指定します。</span><span class="sxs-lookup"><span data-stu-id="5d625-103">A `Using` statement specifies an array variable for a resource.</span></span>  
