--- a/docs/csharp/misc/cs0727.md
+++ b/docs/csharp/misc/cs0727.md
@@ -8,9 +8,10 @@ helpviewer_keywords:
 ms.assetid: 54bfb87e-d759-4310-a8ab-02dccd06337c
 ms.openlocfilehash: 358dfccecd8ba62a57b98585f40e8736be06b808
 ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
-ms.translationtype: MT
+ms.translationtype: HT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33308416"
 ---
 # <a name="compiler-error-cs0727"></a>コンパイラ エラー CS0727
 無効な形式指定子です。  
