--- a/docs/visual-basic/misc/bc31121.md
+++ b/docs/visual-basic/misc/bc31121.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33621389"
 ---
 # <a name="39custom39-modifier-is-not-valid-on-events-declared-in-interfaces"></a>&#39;カスタム&#39;modifier はインターフェイスで宣言されたイベントでは有効ではありません
 カスタム イベントはその `AddHandler`、 `RemoverHandler`、および `RaiseEvent` メソッドで実装を提供する必要があるので、インターフェイス内でカスタム イベントを宣言できません。  
