--- a/docs/visual-basic/misc/bc32065.md
+++ b/docs/visual-basic/misc/bc32065.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33626891"
 ---
 # <a name="type-parameters-cannot-be-specified-on-this-declaration"></a>型パラメーターはこの宣言に指定できません
 プログラミング要素が型パラメーター リストを使用して宣言されていますが、このプログラミング要素はジェネリック型に適合していません。  
