--- a/docs/visual-basic/misc/bc36589.md
+++ b/docs/visual-basic/misc/bc36589.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33631187"
 ---
 # <a name="type-parameter-39lttypeparameternamegt39-for-extension-method-39ltmethodnamegt39-defined-in-39lttypenamegt39-cannot-be-inferred"></a>パラメーター入力&#39; &lt;typeparametername&gt; &#39;拡張メソッドの&#39; &lt;methodname&gt; &#39;で定義されている&#39; &lt;typename&gt; &#39;推論することはできません
 型引数リストを指定せずにジェネリック拡張メソッドが呼び出されており、いずれかの型引数についての型の推定が失敗しました  
