--- a/docs/visual-basic/misc/bc36605.md
+++ b/docs/visual-basic/misc/bc36605.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33631499"
 ---
 # <a name="39by39-expected"></a>&#39;によって&#39;が必要です
 `Order By` または `Group By` 句が指定されていますが、 `By` キーワードがありません。  
