commit bilingual contents

--- a/docs/visual-basic/misc/bc32065.md
+++ b/docs/visual-basic/misc/bc32065.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33626891"
 ---
 # <a name="type-parameters-cannot-be-specified-on-this-declaration"></a><span data-ttu-id="23d51-102">型パラメーターはこの宣言に指定できません</span><span class="sxs-lookup"><span data-stu-id="23d51-102">Type parameters cannot be specified on this declaration</span></span>
 <span data-ttu-id="23d51-103">プログラミング要素が型パラメーター リストを使用して宣言されていますが、このプログラミング要素はジェネリック型に適合していません。</span><span class="sxs-lookup"><span data-stu-id="23d51-103">A programming element is declared with a type parameter list, but the programming element is not eligible to be a generic type.</span></span>  
