--- a/docs/visual-basic/misc/bc31049.md
+++ b/docs/visual-basic/misc/bc31049.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33619669"
 ---
 # <a name="initializers-on-structure-members-are-valid-only-for-39shared39-members-and-constants"></a><span data-ttu-id="a585c-102">構造体メンバーの初期化子は、に対してのみ有効&#39;Shared&#39;メンバーおよび定数</span><span class="sxs-lookup"><span data-stu-id="a585c-102">Initializers on structure members are valid only for &#39;Shared&#39; members and constants</span></span>
 <span data-ttu-id="a585c-103">構造体メンバー変数が、その構造体の宣言の一部として初期化されました。</span><span class="sxs-lookup"><span data-stu-id="a585c-103">A structure member variable was initialized as part of its declaration.</span></span>  
