--- a/docs/visual-basic/misc/bc31150.md
+++ b/docs/visual-basic/misc/bc31150.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33621275"
 ---
 # <a name="end-tag-lttagnamegt-expected"></a><span data-ttu-id="dd1b0-102">終了タグ&lt;/tagName&gt;が必要です</span><span class="sxs-lookup"><span data-stu-id="dd1b0-102">End tag &lt;/tagName&gt; expected</span></span>
 <span data-ttu-id="dd1b0-103">XML 要素リテラルの終了タグが、対応する開始タグに一致しません。</span><span class="sxs-lookup"><span data-stu-id="dd1b0-103">The end tag in an XML element literal does not match the corresponding start tag.</span></span>  
