--- a/docs/visual-basic/misc/bc36005.md
+++ b/docs/visual-basic/misc/bc36005.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33628836"
 ---
 # <a name="39elseif39-must-be-preceded-by-a-matching-39if39-or-39elseif39"></a><span data-ttu-id="21c01-102">&#39;ElseIf&#39;前に、対応する必要がある&#39;場合&#39;または&#39;ElseIf&#39;</span><span class="sxs-lookup"><span data-stu-id="21c01-102">&#39;ElseIf&#39; must be preceded by a matching &#39;If&#39; or &#39;ElseIf&#39;</span></span>
 <span data-ttu-id="21c01-103">`ElseIf` ステートメントがありますが、対応する `If` ステートメントがありません。</span><span class="sxs-lookup"><span data-stu-id="21c01-103">An `ElseIf` statement occurs without a corresponding `If` statement.</span></span> <span data-ttu-id="21c01-104">`ElseIf` の前に、 `If` ステートメントまたは別の `ElseIf` ステートメントが必要です。</span><span class="sxs-lookup"><span data-stu-id="21c01-104">`ElseIf` must be preceded by an `If` statement or another `ElseIf` statement.</span></span>  
