--- a/docs/visual-basic/misc/bc36664.md
+++ b/docs/visual-basic/misc/bc36664.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33632227"
 ---
 # <a name="nesting-of-parentheses-in-lambda-expression39s-parameter-list-exceeds-maximum-allowable-depth"></a><span data-ttu-id="bd6a0-102">ラムダ式内のかっこの入れ子&#39;s パラメーター リストは、許容された深さを超えています。</span><span class="sxs-lookup"><span data-stu-id="bd6a0-102">Nesting of parentheses in lambda expression&#39;s parameter list exceeds maximum allowable depth</span></span>
 <span data-ttu-id="bd6a0-103">ラムダ式のパラメーター リスト内の入れ子になったかっこの深さは、128 を超えることはできません。</span><span class="sxs-lookup"><span data-stu-id="bd6a0-103">Nested parentheses in a lambda expression's parameter list cannot exceed a depth of 128.</span></span>  
