commit bilingual contents

--- a/docs/visual-basic/misc/bc30019.md
+++ b/docs/visual-basic/misc/bc30019.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33600115"
 ---
 # <a name="delegates-cannot-handle-events"></a><span data-ttu-id="0fbf5-102">デリゲートでイベントを処理することはできません</span><span class="sxs-lookup"><span data-stu-id="0fbf5-102">Delegates cannot handle events</span></span>
 <span data-ttu-id="0fbf5-103">デリゲートは、共有プロシージャまたはオブジェクトのインスタンス プロシージャを指す参照型です。</span><span class="sxs-lookup"><span data-stu-id="0fbf5-103">A delegate is a reference type that points to a shared procedure or to an instance procedure on an object.</span></span> <span data-ttu-id="0fbf5-104">デリゲートが指すプロシージャは代入によって変更できるため、 `Delegate` ステートメントは `Handles` または `Implements` 句をサポートできません。</span><span class="sxs-lookup"><span data-stu-id="0fbf5-104">Because the procedure it points to can be changed by assignment, the `Delegate` statement cannot support the `Handles` or `Implements` clauses.</span></span>  
